--- a/android/lib/resource/src/main/res/values-es/strings.xml
+++ b/android/lib/resource/src/main/res/values-es/strings.xml
@@ -84,6 +84,7 @@
     <string name="copy_account_number">Copiar número de cuenta</string>
     <string name="create">Crear</string>
     <string name="create_account">Crear cuenta</string>
+    <string name="create_custom_list_message">Se ha creado «%1$s»</string>
     <string name="create_new_list">Crear nueva lista</string>
     <string name="created_x">Creado: %1$s</string>
     <string name="creating_new_account">Creando cuenta…</string>
@@ -98,9 +99,12 @@
     <string name="custom_port_dialog_placeholder">Introducir puerto</string>
     <string name="custom_port_dialog_remove">Quitar puerto personalizado</string>
     <string name="custom_port_dialog_submit">Establecer puerto</string>
+    <string name="custom_port_dialog_title">Puerto personalizado de %1$s</string>
     <string name="custom_port_dialog_valid_ranges">Intervalos válidos: %1$s</string>
     <string name="custom_tunnel_host_resolution_error">No se puede resolver el host del túnel personalizado. Pruebe a cambiar la configuración.</string>
     <string name="daita_info">%1$s (%2$s) oculta los patrones en su tráfico VPN cifrado. Si alguien supervisa su conexión, esto les dificulta notablemente identificar qué sitios web está visitando. Lo realiza añadiendo con cuidado ruido de red y haciendo que todos los paquetes de red tengan el mismo tamaño.</string>
+    <string name="daita_relay_subset_warning">Esta característica no está disponible en todos los servidores. Podría tener que cambiar de ubicación tras habilitarla.</string>
+    <string name="daita_warning">Atención: Como esto aumenta el tráfico total de su red, tenga cuidado si tiene un plan de datos limitado. También puede afectar negativamente a la velocidad de su red y al uso de la batería.</string>
     <string name="delete">Eliminar</string>
     <string name="delete_custom_list_confirmation_description">¿Eliminar «%1$s»?</string>
     <string name="delete_custom_list_message">Se ha eliminado «%1$s»</string>
@@ -181,6 +185,7 @@
     <string name="local_network_sharing_info">Esta característica permite el acceso a otros dispositivos de la red local, como para compartir, imprimir, transmitir, etc.</string>
     <string name="location_added">%1$s (añadido)</string>
     <string name="location_was_added_to_list">%1$s se ha añadido a «%2$s»</string>
+    <string name="location_was_removed_from_list">%1$s se ha eliminado de «%2$s»</string>
     <string name="locations">Ubicaciones</string>
     <string name="locations_were_changed_for">Se han cambiado las ubicaciones para «%1$s»</string>
     <string name="log_out">Cerrar sesión</string>
@@ -241,6 +246,7 @@
     <string name="please_enter_a_valid_ip_address">Escriba una dirección IPv4 o IPv6 válida</string>
     <string name="please_enter_a_valid_remote_server_port">Introduzca un puerto de servidor remoto válido</string>
     <string name="port">Puerto</string>
+    <string name="port_x">Puerto: %1$s</string>
     <string name="privacy_disclaimer_body_first_paragraph">Para garantizar que tiene la versión más segura e informarle de cualquier problema con la versión actual que está ejecutando, la aplicación realiza verificaciones de versiones automáticamente. Esto envía la versión de la aplicación y la versión del sistema Android a los servidores de Mullvad. Mullvad mantiene contadores del número de versiones de la aplicación y versiones de Android usadas. Los datos nunca se almacenan ni utilizan de forma que puedan identificarle.</string>
     <string name="privacy_disclaimer_body_second_paragraph">Si se utiliza la característica de túnel dividido, la aplicación consultará a su sistema la lista de todas las aplicaciones instaladas. Esta lista solo se recupera en la vista de túnel dividido. La lista de aplicaciones instaladas nunca se envía desde el dispositivo.</string>
     <string name="privacy_disclaimer_title">Privacidad</string>
@@ -256,6 +262,7 @@
     <string name="redeem">Canjear</string>
     <string name="redeem_voucher">Canjear cupón</string>
     <string name="remove_button">Quitar</string>
+    <string name="remove_location_from_list">Quitar %1$s de %2$s</string>
     <string name="rented">Alquilados</string>
     <string name="rented_only">Solo alquilados</string>
     <string name="report_a_problem">Informar de un problema</string>
@@ -263,7 +270,7 @@
     <string name="save">Guardar</string>
     <string name="search_placeholder">Buscar...</string>
     <string name="secure_connection">CONEXIÓN SEGURA</string>
-    <string name="secured">Protegido</string>
+    <string name="secured">Protegida</string>
     <string name="select_location">Seleccionar ubicación</string>
     <string name="select_location_description">Mientras esté conectado, su ubicación real permanecerá oculta con una ubicación privada y segura en la región seleccionada.</string>
     <string name="select_location_empty_text_first_row">No hay resultados para &lt;b&gt;%1$s&lt;/b&gt;.</string>
@@ -307,6 +314,7 @@
     <string name="show_account_number">Mostrar número de cuenta</string>
     <string name="show_system_apps">Mostrar aplicaciones del sistema</string>
     <string name="split_tunneling_description">Le permite seleccionar aplicaciones que deberían acceder a Internet directamente sin pasar por el túnel VPN.</string>
+    <string name="split_tunneling_description_warning">Atención: Si la opción «Bloquear conexiones sin VPN» está activada, las aplicaciones divididas no tendrán Internet. Tenga siempre en cuenta que «Split tunneling» supone un riesgo para la privacidad.</string>
     <string name="start_tunnel_error">No se puede iniciar la conexión del túnel. Envíe un informe de problemas.</string>
     <string name="submit_button">Enviar</string>
     <string name="switch_location">Cambiar ubicación</string>
@@ -328,12 +336,13 @@
     <string name="udp_over_tcp_port_info">El puerto TCP al que se conectará el protocolo de ofuscación de UDP sobre TCP en el servidor VPN.</string>
     <string name="udp_over_tcp_port_title">Puerto de UDP sobre TCP</string>
     <string name="undo">Deshacer</string>
-    <string name="unsecured">No protegido</string>
+    <string name="unsecured">No protegida</string>
     <string name="unsecured_connection">CONEXIÓN NO SEGURA</string>
-    <string name="unsecured_vpn_permission_error">Desprotegido (sin permiso de VPN)</string>
+    <string name="unsecured_vpn_permission_error">No protegida (sin permiso de VPN)</string>
     <string name="unsupported_version">VERSIÓN NO ADMITIDA</string>
     <string name="unsupported_version_description">Al usar esta versión obsoleta de la aplicación, es posible que su privacidad esté en riesgo. Actualice ahora.</string>
     <string name="unsupported_version_without_upgrade">Ejecuta una versión de la aplicación que no es compatible.</string>
+    <string name="upd_over_tcp">UDP sobre TCP</string>
     <string name="update_available_footer">Hay una actualización disponible, descárguela para seguir protegido.</string>
     <string name="update_dns_server_dialog_title">Actualizar servidor DNS</string>
     <string name="update_list_name">Actualizar nombre de la lista</string>
@@ -346,6 +355,7 @@
     <string name="view_logs">Ver registros de la aplicación</string>
     <string name="virtual_adapter_problem">Error del adaptador virtual</string>
     <string name="voucher_already_used">El código del cupón ya se ha usado.</string>
+    <string name="voucher_is_account_number">Parece que ha introducido un número de cuenta en lugar de un código de cupón. Si desea cambiar la cuenta activa, cierre primero la sesión.</string>
     <string name="voucher_success_title">El cupón se canjeó correctamente.</string>
     <string name="vpn_permission_denied_error">Se denegó el permiso para usar una conexión VPN al crear el túnel. Intente volver a establecer la conexión.</string>
     <string name="vpn_permission_error_notification_message">La VPN siempre activa podría estar habilitada en otra aplicación</string>
