--- a/gui/locales/pt/messages.po
+++ b/gui/locales/pt/messages.po
@@ -10,7 +10,10 @@ msgstr ""
 "Project-Id-Version: mullvad-app\n"
 "Language-Team: Portuguese\n"
 "Language: pt_PT\n"
-"PO-Revision-Date: 2024-06-27 08:16\n"
+"PO-Revision-Date: 2024-10-09 14:55\n"
+
+msgid "%(amount)d more..."
+msgstr "Mais %(amount)d..."
 
 msgid "%(duration)s was added, account paid until %(expiry)s."
 msgstr "foi adicionado %(duration)s, conta paga até %(expiry)s."
@@ -96,8 +99,14 @@ msgstr "Ligar"
 msgid "Connected"
 msgstr "Ligado"
 
+msgid "CONNECTED"
+msgstr "LIGADO"
+
 msgid "Connecting"
 msgstr "A ligar"
+
+msgid "CONNECTING..."
+msgstr "A LIGAR..."
 
 #. Creating a secure connection that isn't breakable by quantum computers.
 msgid "CREATING QUANTUM SECURE CONNECTION"
@@ -108,6 +117,11 @@ msgstr "A CRIAR LIGAÇÃO SEGURA"
 
 msgid "Custom"
 msgstr "Personalizado"
+
+#. This refers to the Custom DNS setting in the VPN settings view. This is
+#. displayed when the feature is on.
+msgid "Custom DNS"
+msgstr "DNS personalizado"
 
 msgid "Default"
 msgstr "Padrão"
@@ -121,6 +135,9 @@ msgstr "Eliminar lista"
 msgid "Disable"
 msgstr "Desativar"
 
+msgid "Disable anyway"
+msgstr "Desativar mesmo assim"
+
 msgid "Disconnect"
 msgstr "Desligar"
 
@@ -130,11 +147,14 @@ msgstr "Desligar e sair"
 msgid "Disconnected"
 msgstr "Desligado"
 
+msgid "DISCONNECTED"
+msgstr "DESLIGADO"
+
 msgid "Disconnecting"
 msgstr "A desligar"
 
-msgid "Dismiss"
-msgstr "Dispensar"
+msgid "DISCONNECTING..."
+msgstr "A DESLIGAR..."
 
 msgid "Edit"
 msgstr "Editar"
@@ -176,6 +196,11 @@ msgstr "menos de um dia"
 msgid "less than a day left"
 msgstr "menos de um dia restante"
 
+#. This refers to the multihop setting in the VPN settings view. This is
+#. displayed when the feature is on.
+msgid "Multihop"
+msgstr "Multihop"
+
 msgid "Name"
 msgstr "Nome"
 
@@ -202,6 +227,11 @@ msgstr "Palavra-passe"
 
 msgid "Port"
 msgstr "Porta"
+
+#. This refers to the quantum resistance setting in the WireGuard settings view.
+#. This is displayed when the feature is on.
+msgid "Quantum resistance"
+msgstr "Resistência quântica"
 
 #. The connection is secure and isn't breakable by quantum computers.
 msgid "QUANTUM SECURE CONNECTION"
@@ -340,11 +370,19 @@ msgctxt "accessibility"
 msgid "Select location. Current location is %(location)s"
 msgstr "Selecionar localização. A localização atual é %(location)s"
 
+msgctxt "accessibility"
+msgid "Shadowsocks settings"
+msgstr "Definições de Shadowsocks"
+
 #. Provided to accessibility tools such as screenreaders to describe
 #. the button which unobscures the account number.
 msgctxt "accessibility"
 msgid "Show account number"
 msgstr "Mostrar número de conta"
+
+msgctxt "accessibility"
+msgid "UDP-over-TCP settings"
+msgstr "Definições de UDP sobre TCP"
 
 #. Title label in navigation bar
 msgctxt "account-view"
@@ -570,8 +608,16 @@ msgid "%(city)s (%(hostname)s)"
 msgstr "%(city)s (%(hostname)s)"
 
 msgctxt "connect-view"
+msgid "Active features"
+msgstr "Funcionalidades ativas"
+
+msgctxt "connect-view"
 msgid "Congrats!"
 msgstr "Parabéns!"
+
+msgctxt "connect-view"
+msgid "Connection details"
+msgstr "Detalhes da ligação"
 
 msgctxt "connect-view"
 msgid "Disconnect"
@@ -645,12 +691,6 @@ msgctxt "connect-view"
 msgid "You’re all set!"
 msgstr "Está pronto!"
 
-#. %(hostname)s - The current server the app is connected to, e.g. "se-got-wg-001 using DAITA"
-#. %(daita)s - Will be replaced with "DAITA"
-msgctxt "connection-info"
-msgid "%(hostname)s using %(daita)s"
-msgstr "%(hostname)s a usar %(daita)s"
-
 #. The hostname line displayed below the country on the main screen
 #. Available placeholders:
 #. %(relay)s - the relay hostname
@@ -662,14 +702,6 @@ msgstr "%(relay)s via %(entry)s"
 msgctxt "connection-info"
 msgid "%(relay)s via Custom bridge"
 msgstr "%(relay)s através de ponte personalizada"
-
-#. The tunnel type line displayed below the hostname line on the main screen
-#. Available placeholders:
-#. %(tunnelType)s - the tunnel type, i.e OpenVPN
-#. %(bridgeType)s - the bridge type, i.e Shadowsocks
-msgctxt "connection-info"
-msgid "%(tunnelType)s via %(bridgeType)s"
-msgstr "%(tunnelType)s via %(bridgeType)s"
 
 msgctxt "connection-info"
 msgid "In"
@@ -1501,6 +1533,9 @@ msgctxt "settings-view"
 msgid "Support"
 msgstr "Suporte"
 
+msgid "%s custom port"
+msgstr "Porta personalizada %s"
+
 msgctxt "settings-view"
 msgid "Update available. Install the latest app version to stay up to date."
 msgstr "Atualização disponível. Instale a versão mais recente da aplicação para se manter atualizado."
@@ -1761,8 +1796,8 @@ msgid "Update your kernel."
 msgstr "Atualize o seu kernel."
 
 msgctxt "tunnel-control"
-msgid "Secure my connection"
-msgstr "Tornar a minha ligação segura"
+msgid "Connect"
+msgstr "Ligar"
 
 msgctxt "tunnel-control"
 msgid "Switch location"
@@ -1909,7 +1944,7 @@ msgstr "Jogos de azar"
 #. %(wireguard)s - Will be replaced with the string "WireGuard"
 msgctxt "vpn-settings-view"
 msgid "Increases anonymity by routing your traffic into one %(wireguard)s server and out another, making it harder to trace."
-msgstr "Aumenta o anonimato ao redirecionar o seu tráfego para entrar num servidor %(wireguard)s e sair noutro, tornando-o mais difícil de seguir."
+msgstr "Aumenta o anonimato ao redirecionar o seu tráfego para entrar num servidor %(wireguard)s e sair noutro, tornando o seguimento mais difícil."
 
 msgctxt "vpn-settings-view"
 msgid "IPv4 is always enabled and the majority of websites and applications use this protocol. We do not recommend enabling IPv6 unless you know you need it."
@@ -2025,6 +2060,16 @@ msgctxt "wireguard-settings-nav"
 msgid "%(wireguard)s settings"
 msgstr "Definições do %(wireguard)s"
 
+#. Title label in navigation bar
+msgctxt "wireguard-settings-nav"
+msgid "Shadowsocks"
+msgstr "Shadowsocks"
+
+#. Title label in navigation bar
+msgctxt "wireguard-settings-nav"
+msgid "UDP-over-TCP"
+msgstr "UDP sobre TCP"
+
 msgctxt "wireguard-settings-view"
 msgid "%(daita)s (%(daitaFull)s) hides patterns in your encrypted VPN traffic. If anyone is monitoring your connection, this makes it significantly harder for them to identify what websites you are visiting. It does this by carefully adding network noise and making all network packets the same size."
 msgstr "%(daita)s (%(daitaFull)s) oculta padrões no seu tráfego VPN encriptado. Se alguém estiver a monitorizar a sua ligação, isto dificulta significativamente a identificação dos sites que visita. Para tal, adiciona cuidadosamente ruído de rede e torna todos os pacotes de rede do mesmo tamanho."
@@ -2036,8 +2081,8 @@ msgid "%(wireguard)s settings"
 msgstr "Definições do %(wireguard)s"
 
 msgctxt "wireguard-settings-view"
-msgid "Attention: Since this increases your total network traffic, be cautious if you have a limited data plan. It can also negatively impact your network speed. Please consider this if you want to enable %(daita)s."
-msgstr "Atenção: visto que isto aumenta o tráfego total da sua rede, tenha cuidado se tiver um plano de dados limitado. Também pode afetar negativamente a velocidade da sua rede. Tenha isto em consideração se pretender ativar %(daita)s."
+msgid "Hides patterns in your encrypted VPN traffic. Since this increases your total network traffic, be cautious if you have a limited data plan. It can also negatively impact your network speed and battery usage."
+msgstr "Oculta padrões no seu tráfego VPN encriptado. Visto que isto aumenta o tráfego total da sua rede, tenha cuidado se tiver um plano de dados limitado. Também pode afetar negativamente a velocidade da rede e a utilização da bateria."
 
 msgctxt "wireguard-settings-view"
 msgid "IP version"
@@ -2060,12 +2105,15 @@ msgid "Obfuscation hides the WireGuard traffic inside another protocol. It can b
 msgstr "A ofuscação oculta o tráfego do WireGuard dentro de outro protocolo. Pode ser utilizado para ajudar a contornar a censura e outros tipos de filtragem, onde uma simples ligação WireGuard seria bloqueada."
 
 msgctxt "wireguard-settings-view"
-msgid "On (UDP-over-TCP)"
-msgstr "Ligado (UDP sobre TCP)"
-
-msgctxt "wireguard-settings-view"
 msgid "Port"
 msgstr "Porta"
+
+#. Text showing currently selected port.
+#. Available placeholders:
+#. %(port)s - Can be either a number between 1 and 65000 or the text "Automatic".
+msgctxt "wireguard-settings-view"
+msgid "Port: %(port)s"
+msgstr "Porta: %(port)s"
 
 #. The title for the WireGuard quantum resistance selector. This setting
 #. makes the cryptography resistant to the future abilities of quantum
@@ -2084,6 +2132,10 @@ msgid "Set %(wireguard)s MTU value. Valid range: %(min)d - %(max)d."
 msgstr "Definir o valor MTU %(wireguard)s. Intervalo válido: %(min)d - %(max)d."
 
 msgctxt "wireguard-settings-view"
+msgid "Shadowsocks"
+msgstr "Shadowsocks"
+
+msgctxt "wireguard-settings-view"
 msgid "The automatic setting will randomly choose from the valid port ranges shown below."
 msgstr "A definição automática escolherá aleatoriamente a partir do intervalo de portas válido apresentado abaixo."
 
@@ -2098,18 +2150,22 @@ msgctxt "wireguard-settings-view"
 msgid "This allows access to %(wireguard)s for devices that only support IPv6."
 msgstr "Isto permite o acesso ao %(wireguard)s por dispositivos que suportem apenas IPv6."
 
-#. Warning text in a dialog that is displayed after a setting is toggled.
-msgctxt "wireguard-settings-view"
-msgid "This feature isn't available on all servers. You might need to change location after enabling."
-msgstr "Esta funcionalidade não está disponível em todos os servidores. Poderá ser necessário alterar a localização após a ativação."
-
 msgctxt "wireguard-settings-view"
 msgid "This feature makes the WireGuard tunnel resistant to potential attacks from quantum computers."
 msgstr "Esta funcionalidade torna o túnel do WireGuard resistente a potenciais ataques de computadores quânticos."
 
 msgctxt "wireguard-settings-view"
+msgid "UDP-over-TCP"
+msgstr "UDP sobre TCP"
+
+msgctxt "wireguard-settings-view"
 msgid "UDP-over-TCP port"
 msgstr "Porta UDP sobre TCP"
+
+#. Text describing the valid port range for a port selector.
+msgctxt "wireguard-settings-view"
+msgid "Valid range: %(min)s - %(max)s"
+msgstr "Intervalo válido: %(min)s — %(max)s"
 
 msgctxt "wireguard-settings-view"
 msgid "Which TCP port the UDP-over-TCP obfuscation protocol should connect to on the VPN server."
@@ -2118,14 +2174,21 @@ msgstr "A que porta TCP o protocolo de ofuscação UDP sobre TCP deve ligar-se n
 msgid "%s (added)"
 msgstr "%s (adicionado)"
 
+msgctxt "String explaining where the user is connected and whether the connection is \"using\" a specific feature. So the first placeholder is a location and the second is a named feature. Example: \"gb-lon-wg-304 using DAITA\" (where \"gb-lon-wg-304\" is the location and \"DAITA\" is the named feature)"
+msgid "%s using %s"
+msgstr "%s a utilizar %s"
+
 msgid "%s was added to \"%s\""
 msgstr "%s foi adicionado a \"%s\""
 
 msgid "%s was added to your account."
 msgstr "%s adicionado(s) à sua conta."
 
+msgid "%s was removed from \"%s\""
+msgstr "%s foi removida de \"%s\""
+
 msgid "1. After clicking on the <b>Go to VPN settings</b> button below, click on the cogwheel next to the <b>Mullvad VPN</b> name."
-msgstr "1. Depois de clicar no botão <b>Ir para as definições de VPN</b> abaixo, clique na roda dentada junto ao nome da <b>Mullvad VPN</b>."
+msgstr "1. Após clicar no botão <b>Ir para as definições de VPN</b> abaixo, clique na roda dentada junto ao nome da <b>Mullvad VPN</b>."
 
 msgid "2. To enable Auto-connect, click on the toggle next to <b>Always-on VPN</b>."
 msgstr "2. Para ativar a ligação automática, clique no botão de alternar junto a <b>VPN sempre ligada</b>."
@@ -2190,17 +2253,17 @@ msgstr "A VPN sempre ligada pode estar ativada para outra app"
 msgid "At least one method needs to be enabled"
 msgstr "É necessário ativar pelo menos um método"
 
-msgid "Attention: Split tunneling is a privacy risk."
-msgstr "Atenção: a divisão do túnel é um risco para a privacidade."
+msgid "Attention: If \"Block connections without VPN\" is enabled, split apps will not have Internet. Always keep in mind that split tunneling is a privacy risk."
+msgstr "Atenção: se a opção \"Bloquear ligações sem VPN\" estiver ativada, as aplicações divididas não terão Internet. Tenha sempre em mente que o túnel dividido representa um risco para a privacidade."
+
+msgid "Attention: Since this increases your total network traffic, be cautious if you have a limited data plan. It can also negatively impact your network speed and battery usage."
+msgstr "Atenção: visto que isto aumenta o tráfego total da sua rede, tenha cuidado se tiver um plano de dados limitado. Também pode afetar negativamente a velocidade da rede e a utilização da bateria."
 
 msgid "Attention: this setting cannot be used in combination with <b>Use custom DNS server</b>."
-msgstr "Atenção: esta definição não pode ser usada em combinação com <b>Usar servidor DNS personalizado</b>."
+msgstr "Atenção: esta definição não pode ser utilizada em combinação com <b>Usar servidor DNS personalizado</b>."
 
 msgid "Auto-connect & Lockdown mode"
 msgstr "Ligação automática e modo de bloqueio"
-
-msgid "Auto-connect & \\nLockdown mode"
-msgstr "Ligação automática e\\nmodo de bloqueio"
 
 msgid "Auto-connect (legacy)"
 msgstr "Ligação automática (método antigo)"
@@ -2208,7 +2271,6 @@ msgstr "Ligação automática (método antigo)"
 msgid "Auto-connect is called Always-on VPN in the Android system settings and it makes sure you are constantly connected to the VPN tunnel and auto connects after restart."
 msgstr "A ligação automática é designada por VPN sempre ligada nas definições do sistema Android e assegura que está constantemente ligado ao túnel VPN e ligar-se-á automaticamente após o reinício."
 
-msgctxt "Description of the existing \"auto-connect\" functionality as well as a notification about it being removed/replaced in a future update."
 msgid "Automatically connect when the app launches. This setting will be replaced with a new connect on device start-up feature in a future update."
 msgstr "Ligar automaticamente quando a aplicação é iniciada. Esta definição será substituída por uma nova funcionalidade de ligação no arranque do dispositivo numa futura atualização."
 
@@ -2239,7 +2301,6 @@ msgstr "Criar nova lista"
 msgid "Critical error (your attention is required)"
 msgstr "Erro crítico (é necessária a sua atenção)"
 
-msgctxt "Status information about which method/configuration is actively being used. The placeholder is replaced by a built-in or custom method. For example \"Current: Direct\" or \"Current: MyCustomMethod\". Note that it's not \"current\" as in \"present time\"."
 msgid "Current: %s"
 msgstr "Atual: %s"
 
@@ -2266,6 +2327,9 @@ msgstr "Descartar"
 
 msgid "Discard changes?"
 msgstr "Descartar alterações?"
+
+msgid "Dismiss"
+msgstr "Dispensar"
 
 msgid "Edit custom lists"
 msgstr "Editar listas personalizadas"
@@ -2327,11 +2391,11 @@ msgstr "Importação bem-sucedida: substituições ativas"
 msgid "Importing new overrides might replace some previously imported overrides."
 msgstr "A importação de novas substituições pode substituir algumas substituições importadas anteriormente."
 
-msgid "Install Mullvad VPN (%s) to stay up to date"
-msgstr "Instalar o Mullvad VPN (%s) para ficar atualizado"
-
 msgid "Invalid or missing value \"%s\""
 msgstr "Valor inválido ou em falta \"%s\""
+
+msgid "It looks like you’ve entered an account number instead of a voucher code. If you would like to change the active account, please log out first."
+msgstr "Parece que introduziu um número de conta em vez de um código de voucher. Se pretender alterar a conta ativa, termine a sessão primeiro."
 
 msgid "Lets you select apps that should access the Internet directly without going through the VPN tunnel."
 msgstr "Permite-lhe selecionar aplicações que devem aceder diretamente à Internet sem passar pelo túnel VPN."
@@ -2375,6 +2439,9 @@ msgstr "Nenhuma localização encontrada"
 msgid "Not found"
 msgstr "Não encontrada"
 
+msgid "On (UDP-over-TCP)"
+msgstr "Ligado (UDP sobre TCP)"
+
 msgid "Overrides active"
 msgstr "Substituições ativas"
 
@@ -2417,8 +2484,8 @@ msgstr "Limite de recursão"
 msgid "Remove"
 msgstr "Remover"
 
-msgid "Remove %s from list"
-msgstr "Remover %s da lista"
+msgid "Remove %s from %s"
+msgstr "Remover %s de %s"
 
 msgid "Remove custom port"
 msgstr "Remover porta personalizada"
@@ -2435,8 +2502,11 @@ msgstr "Repor substituições"
 msgid "Reset to default"
 msgstr "Repor para as predefinições"
 
+msgid "Secure my connection"
+msgstr "Tornar a minha ligação segura"
+
 msgid "Secured"
-msgstr "Seguro"
+msgstr "Segura"
 
 msgid "Set WireGuard MTU value. Valid range: %d - %d."
 msgstr "Definir o valor WireGuard MTU. Intervalo válido: %d - %d."
@@ -2469,7 +2539,7 @@ msgid "The Auto-connect and Lockdown mode settings can be found in the Android s
 msgstr "As definições da ligação automática e do modo de bloqueio podem ser encontradas nas definições do sistema Android. Siga este guia para ativar uma ou ambas as funcionalidades."
 
 msgid "The Lockdown mode is called <b>Block connections without VPN</b> in the Android system settings. It helps minimize leaks, however it has some known limitations which you can read more about"
-msgstr "O modo de bloqueio é chamado <b>Bloquear ligações sem VPN</b> nas definições do sistema Android. Ajuda a minimizar fugas, mas tem algumas limitações conhecidas sobre as quais pode ler mais"
+msgstr "O modo de bloqueio é designado por <b>Bloquear ligações sem VPN</b> nas definições do sistema Android. Ajuda a minimizar fugas, mas tem algumas limitações conhecidas sobre as quais pode ler mais"
 
 msgid "The \"Current\" method represent which method the app is using to reach the API."
 msgstr "O método \"Atual\" representa o método que a aplicação está a utilizar para aceder à API."
@@ -2482,6 +2552,9 @@ msgstr "Não existem definições de VPN no seu dispositivo"
 
 msgid "This address has already been entered."
 msgstr "Este endereço já foi introduzido."
+
+msgid "This feature isn’t available on all servers. You might need to change location after enabling."
+msgstr "Esta funcionalidade não está disponível em todos os servidores. Poderá ser necessário alterar a localização após a ativação."
 
 msgid "This field is required"
 msgstr "Este campo é obrigatório"
@@ -2517,11 +2590,10 @@ msgid "Unknown or prohibited key \"%s\""
 msgstr "Chave \"%s\" desconhecida ou proibida"
 
 msgid "Unsecured"
-msgstr "Inseguro"
+msgstr "Insegura"
 
-msgctxt "Notification message shown when the app lacks a permission called \"VPN permission\"."
 msgid "Unsecured (No VPN permission)"
-msgstr "Inseguro (sem permissão de VPN)"
+msgstr "Insegura (sem permissão de VPN)"
 
 msgid "Update DNS server"
 msgstr "Atualizar servidor DNS"
@@ -2580,9 +2652,6 @@ msgstr "Enquanto estiver ligado, a sua localização real será mascarada com um
 msgid "WireGuard MTU"
 msgstr "WireGuard MTU"
 
-msgid "WireGuard custom port"
-msgstr "Porta personalizada WireGuard"
-
 msgid "WireGuard obfuscation"
 msgstr "Ofuscação WireGuard"
 
@@ -2595,10 +2664,12 @@ msgstr "PODERÁ ESTAR A PERDER TRÁFEGO DE REDE"
 msgid "You are running an unsupported app version."
 msgstr "Está a executar uma versão da aplicação não suportada."
 
+msgid "\"%s\" was created"
+msgstr "\"%s\" foi criada"
+
 msgid "\"%s\" was deleted"
 msgstr "\"%s\" foi eliminada"
 
-msgctxt "Clickable link that leads to our website."
 msgid "here"
 msgstr "aqui"
 
