--- a/gui/locales/zh-TW/messages.po
+++ b/gui/locales/zh-TW/messages.po
@@ -10,7 +10,10 @@ msgstr ""
 "Project-Id-Version: mullvad-app\n"
 "Language-Team: Chinese Traditional\n"
 "Language: zh_TW\n"
-"PO-Revision-Date: 2024-06-27 08:16\n"
+"PO-Revision-Date: 2024-10-09 14:55\n"
+
+msgid "%(amount)d more..."
+msgstr "其他 %(amount)d 個..."
 
 msgid "%(duration)s was added, account paid until %(expiry)s."
 msgstr "已新增 %(duration)s，帳戶到期時間為 %(expiry)s。"
@@ -90,8 +93,14 @@ msgstr "連線"
 msgid "Connected"
 msgstr "已連線"
 
+msgid "CONNECTED"
+msgstr "已連線"
+
 msgid "Connecting"
 msgstr "正在連線"
+
+msgid "CONNECTING..."
+msgstr "連線中..."
 
 #. Creating a secure connection that isn't breakable by quantum computers.
 msgid "CREATING QUANTUM SECURE CONNECTION"
@@ -102,6 +111,11 @@ msgstr "建立安全連線"
 
 msgid "Custom"
 msgstr "自訂"
+
+#. This refers to the Custom DNS setting in the VPN settings view. This is
+#. displayed when the feature is on.
+msgid "Custom DNS"
+msgstr "自訂 DNS"
 
 msgid "Default"
 msgstr "預設"
@@ -115,6 +129,9 @@ msgstr "刪除清單"
 msgid "Disable"
 msgstr "停用"
 
+msgid "Disable anyway"
+msgstr "仍然停用"
+
 msgid "Disconnect"
 msgstr "中斷連線"
 
@@ -124,11 +141,14 @@ msgstr "中斷連線並結束"
 msgid "Disconnected"
 msgstr "已中斷連線"
 
+msgid "DISCONNECTED"
+msgstr "已中斷連線"
+
 msgid "Disconnecting"
 msgstr "正在中斷連線"
 
-msgid "Dismiss"
-msgstr "取消"
+msgid "DISCONNECTING..."
+msgstr "正在中斷連線..."
 
 msgid "Edit"
 msgstr "編輯"
@@ -170,6 +190,11 @@ msgstr "不足 1 天"
 msgid "less than a day left"
 msgstr "剩餘時間不足 1 天"
 
+#. This refers to the multihop setting in the VPN settings view. This is
+#. displayed when the feature is on.
+msgid "Multihop"
+msgstr "多點跳躍"
+
 msgid "Name"
 msgstr "名稱"
 
@@ -196,6 +221,11 @@ msgstr "密碼"
 
 msgid "Port"
 msgstr "連接埠"
+
+#. This refers to the quantum resistance setting in the WireGuard settings view.
+#. This is displayed when the feature is on.
+msgid "Quantum resistance"
+msgstr "抗量子"
 
 #. The connection is secure and isn't breakable by quantum computers.
 msgid "QUANTUM SECURE CONNECTION"
@@ -334,11 +364,19 @@ msgctxt "accessibility"
 msgid "Select location. Current location is %(location)s"
 msgstr "選擇位置。目前位置為 %(location)s"
 
+msgctxt "accessibility"
+msgid "Shadowsocks settings"
+msgstr "Shadowsocks 設定"
+
 #. Provided to accessibility tools such as screenreaders to describe
 #. the button which unobscures the account number.
 msgctxt "accessibility"
 msgid "Show account number"
 msgstr "顯示帳號"
+
+msgctxt "accessibility"
+msgid "UDP-over-TCP settings"
+msgstr "UDP-over-TCP 設定"
 
 #. Title label in navigation bar
 msgctxt "account-view"
@@ -564,8 +602,16 @@ msgid "%(city)s (%(hostname)s)"
 msgstr "%(city)s (%(hostname)s)"
 
 msgctxt "connect-view"
+msgid "Active features"
+msgstr "有效功能"
+
+msgctxt "connect-view"
 msgid "Congrats!"
 msgstr "恭喜！"
+
+msgctxt "connect-view"
+msgid "Connection details"
+msgstr "連線詳細資訊"
 
 msgctxt "connect-view"
 msgid "Disconnect"
@@ -639,12 +685,6 @@ msgctxt "connect-view"
 msgid "You’re all set!"
 msgstr "您已設定完畢！"
 
-#. %(hostname)s - The current server the app is connected to, e.g. "se-got-wg-001 using DAITA"
-#. %(daita)s - Will be replaced with "DAITA"
-msgctxt "connection-info"
-msgid "%(hostname)s using %(daita)s"
-msgstr "%(hostname)s，使用 %(daita)s"
-
 #. The hostname line displayed below the country on the main screen
 #. Available placeholders:
 #. %(relay)s - the relay hostname
@@ -656,14 +696,6 @@ msgstr "%(relay)s，經由 %(entry)s"
 msgctxt "connection-info"
 msgid "%(relay)s via Custom bridge"
 msgstr "%(relay)s，經由自訂橋接"
-
-#. The tunnel type line displayed below the hostname line on the main screen
-#. Available placeholders:
-#. %(tunnelType)s - the tunnel type, i.e OpenVPN
-#. %(bridgeType)s - the bridge type, i.e Shadowsocks
-msgctxt "connection-info"
-msgid "%(tunnelType)s via %(bridgeType)s"
-msgstr "%(tunnelType)s 透過 %(bridgeType)s"
 
 msgctxt "connection-info"
 msgid "In"
@@ -1495,6 +1527,9 @@ msgctxt "settings-view"
 msgid "Support"
 msgstr "支援"
 
+msgid "%s custom port"
+msgstr "%s 自訂連接埠"
+
 msgctxt "settings-view"
 msgid "Update available. Install the latest app version to stay up to date."
 msgstr "有可用更新。請安裝最新版本的應用程式以維持最新狀態。"
@@ -1755,8 +1790,8 @@ msgid "Update your kernel."
 msgstr "更新核心。"
 
 msgctxt "tunnel-control"
-msgid "Secure my connection"
-msgstr "保護我的連線"
+msgid "Connect"
+msgstr "連線"
 
 msgctxt "tunnel-control"
 msgid "Switch location"
@@ -2019,9 +2054,19 @@ msgctxt "wireguard-settings-nav"
 msgid "%(wireguard)s settings"
 msgstr "%(wireguard)s 設定"
 
+#. Title label in navigation bar
+msgctxt "wireguard-settings-nav"
+msgid "Shadowsocks"
+msgstr "Shadowsocks"
+
+#. Title label in navigation bar
+msgctxt "wireguard-settings-nav"
+msgid "UDP-over-TCP"
+msgstr "UDP-over-TCP"
+
 msgctxt "wireguard-settings-view"
 msgid "%(daita)s (%(daitaFull)s) hides patterns in your encrypted VPN traffic. If anyone is monitoring your connection, this makes it significantly harder for them to identify what websites you are visiting. It does this by carefully adding network noise and making all network packets the same size."
-msgstr "%(daita)s (%(daitaFull)s) 會在您的加密 VPN 流量中隱藏模式。如果有人正在監視您的連線，這能讓他們難以識別出您正在存取的網站。此實現方式係謹慎加入網路噪音，並使所有網路資料包大小皆相同。"
+msgstr "%(daita)s (%(daitaFull)s) 會在您的加密 VPN 流量中隱藏模式。如果有人正在監視您的連線，這能讓他們更難識別您正在造訪的網站。這是透過精心增加網路噪音、並使所有網路資料包大小皆相同來達成。"
 
 #. Available placeholders:
 #. %(wireguard)s - Will be replaced with the string "WireGuard"
@@ -2030,8 +2075,8 @@ msgid "%(wireguard)s settings"
 msgstr "%(wireguard)s 設定"
 
 msgctxt "wireguard-settings-view"
-msgid "Attention: Since this increases your total network traffic, be cautious if you have a limited data plan. It can also negatively impact your network speed. Please consider this if you want to enable %(daita)s."
-msgstr "注意：這會增加您的網路總流量。如果您方案中的流量有限，請謹慎使用。這還會對您的網路速度產生負面影響。如果要啟用 %(daita)s，請考慮到這一點。"
+msgid "Hides patterns in your encrypted VPN traffic. Since this increases your total network traffic, be cautious if you have a limited data plan. It can also negatively impact your network speed and battery usage."
+msgstr "在您的加密 VPN 流量中隱藏模式。這會增加您的網路總流量。如果您方案中的流量有限，請謹慎使用。這還會對您的網路速度和電池使用情況產生負面影響。"
 
 msgctxt "wireguard-settings-view"
 msgid "IP version"
@@ -2054,12 +2099,15 @@ msgid "Obfuscation hides the WireGuard traffic inside another protocol. It can b
 msgstr "藉由混淆，WireGuard 的流量能隱藏在另一個通訊協定中。這有助於規避審查或其他類型的篩選。在這類篩選中，普通 WireGuard 連線將遭到封鎖。"
 
 msgctxt "wireguard-settings-view"
-msgid "On (UDP-over-TCP)"
-msgstr "開 (UDP-over-TCP)"
-
-msgctxt "wireguard-settings-view"
 msgid "Port"
 msgstr "連接埠"
+
+#. Text showing currently selected port.
+#. Available placeholders:
+#. %(port)s - Can be either a number between 1 and 65000 or the text "Automatic".
+msgctxt "wireguard-settings-view"
+msgid "Port: %(port)s"
+msgstr "連接埠：%(port)s"
 
 #. The title for the WireGuard quantum resistance selector. This setting
 #. makes the cryptography resistant to the future abilities of quantum
@@ -2078,6 +2126,10 @@ msgid "Set %(wireguard)s MTU value. Valid range: %(min)d - %(max)d."
 msgstr "設定 %(wireguard)s MTU 值。有效範圍：%(min)d - %(max)d。"
 
 msgctxt "wireguard-settings-view"
+msgid "Shadowsocks"
+msgstr "Shadowsocks"
+
+msgctxt "wireguard-settings-view"
 msgid "The automatic setting will randomly choose from the valid port ranges shown below."
 msgstr "自動設定將會隨機從下方顯示的有效連接埠範圍中進行選擇。"
 
@@ -2092,18 +2144,22 @@ msgctxt "wireguard-settings-view"
 msgid "This allows access to %(wireguard)s for devices that only support IPv6."
 msgstr "這可以讓僅支援 IPv6 的裝置存取 %(wireguard)s。"
 
-#. Warning text in a dialog that is displayed after a setting is toggled.
-msgctxt "wireguard-settings-view"
-msgid "This feature isn't available on all servers. You might need to change location after enabling."
-msgstr "此功能尚未在所有伺服器上開放。啟用後，您可能需要變更位置。"
-
 msgctxt "wireguard-settings-view"
 msgid "This feature makes the WireGuard tunnel resistant to potential attacks from quantum computers."
 msgstr "借助此功能，WireGuard 通道便能夠抵抗可能從量子電腦發起的攻擊。"
 
 msgctxt "wireguard-settings-view"
+msgid "UDP-over-TCP"
+msgstr "UDP-over-TCP"
+
+msgctxt "wireguard-settings-view"
 msgid "UDP-over-TCP port"
 msgstr "UDP-over-TCP 連接埠"
+
+#. Text describing the valid port range for a port selector.
+msgctxt "wireguard-settings-view"
+msgid "Valid range: %(min)s - %(max)s"
+msgstr "有效範圍：%(min)s - %(max)s"
 
 msgctxt "wireguard-settings-view"
 msgid "Which TCP port the UDP-over-TCP obfuscation protocol should connect to on the VPN server."
@@ -2112,17 +2168,24 @@ msgstr "UDP-over-TCP 混淆通訊協定應連線到 VPN 伺服器上的哪個 TC
 msgid "%s (added)"
 msgstr "%s (已新增)"
 
+msgctxt "String explaining where the user is connected and whether the connection is \"using\" a specific feature. So the first placeholder is a location and the second is a named feature. Example: \"gb-lon-wg-304 using DAITA\" (where \"gb-lon-wg-304\" is the location and \"DAITA\" is the named feature)"
+msgid "%s using %s"
+msgstr "%s，使用 %s"
+
 msgid "%s was added to \"%s\""
 msgstr "%s 已新增至「%s」"
 
 msgid "%s was added to your account."
 msgstr "%s 已新增至您的帳戶。"
 
+msgid "%s was removed from \"%s\""
+msgstr "%s 已從「%s」中移除"
+
 msgid "1. After clicking on the <b>Go to VPN settings</b> button below, click on the cogwheel next to the <b>Mullvad VPN</b> name."
 msgstr "1. 按一下底下<b>前往 VPN 設定</b>按鈕後，請按一下 <b>Mullvad VPN</b> 名稱旁邊的齒輪。"
 
 msgid "2. To enable Auto-connect, click on the toggle next to <b>Always-on VPN</b>."
-msgstr "2. 若要啟用自動連線，請按一下<b>始終啟用 VPN</b> 旁邊的開關。"
+msgstr "2. 若要啟用自動連線，請按一下<b>一律啟用 VPN</b> 旁邊的開關。"
 
 msgid "3. To enable Lockdown mode, click on the toggle next to <b>Block connections without VPN</b>.<br /><br /><b>Warning: This setting blocks split apps and the Local Network Sharing feature.</b>"
 msgstr "3. 若要啟用鎖定模式，請按一下<b>在沒有 VPN 的情況下封鎖連線</b>旁邊的開關。<br /><br /><b>警告：此設定會封鎖分割應用程式和「本機網路共享」功能。</b>"
@@ -2184,8 +2247,11 @@ msgstr "可能已為另一個應用程式啟用了「始終啟用 VPN」"
 msgid "At least one method needs to be enabled"
 msgstr "至少需要啟用一種方式"
 
-msgid "Attention: Split tunneling is a privacy risk."
-msgstr "注意：分割通道存在隱私風險。"
+msgid "Attention: If \"Block connections without VPN\" is enabled, split apps will not have Internet. Always keep in mind that split tunneling is a privacy risk."
+msgstr "注意：如果啟用了「在沒有 VPN 的情況下封鎖連線」，分割應用程式將無法進行網際網路連線。請謹記，分割通道存在隱私風險。"
+
+msgid "Attention: Since this increases your total network traffic, be cautious if you have a limited data plan. It can also negatively impact your network speed and battery usage."
+msgstr "注意：這會增加您的網路總流量。如果您方案中的流量有限，請謹慎使用。這還會對您的網路速度和電池使用情況產生負面影響。"
 
 msgid "Attention: this setting cannot be used in combination with <b>Use custom DNS server</b>."
 msgstr "注意：此設定不能與<b>使用自訂 DNS 伺服器</b>結合使用。"
@@ -2193,18 +2259,14 @@ msgstr "注意：此設定不能與<b>使用自訂 DNS 伺服器</b>結合使用
 msgid "Auto-connect & Lockdown mode"
 msgstr "自動連線和鎖定模式"
 
-msgid "Auto-connect & \\nLockdown mode"
-msgstr "自動連線和\\n鎖定模式"
-
 msgid "Auto-connect (legacy)"
 msgstr "自動連線 (舊)"
 
 msgid "Auto-connect is called Always-on VPN in the Android system settings and it makes sure you are constantly connected to the VPN tunnel and auto connects after restart."
 msgstr "自動連線在 Android 系統設定中稱為「始終啟用 VPN」，此功能可確保您始終與 VPN 通道連線，並且會在重新啟動後自動連線。"
 
-msgctxt "Description of the existing \"auto-connect\" functionality as well as a notification about it being removed/replaced in a future update."
 msgid "Automatically connect when the app launches. This setting will be replaced with a new connect on device start-up feature in a future update."
-msgstr "在啟動應用程式時自動連線。在未來的更新中，此設定將由裝置啟動時即進行連線的新功能所取代。"
+msgstr "在啟動應用程式時自動連線。在未來的更新中，此設定將由「裝置啟動時連線」的新功能所取代。"
 
 msgid "Blocking internet (device offline)"
 msgstr "封鎖網際網路 (裝置離線)"
@@ -2233,7 +2295,6 @@ msgstr "建立新清單"
 msgid "Critical error (your attention is required)"
 msgstr "嚴重錯誤 (需注意)"
 
-msgctxt "Status information about which method/configuration is actively being used. The placeholder is replaced by a built-in or custom method. For example \"Current: Direct\" or \"Current: MyCustomMethod\". Note that it's not \"current\" as in \"present time\"."
 msgid "Current: %s"
 msgstr "目前：%s"
 
@@ -2260,6 +2321,9 @@ msgstr "捨棄"
 
 msgid "Discard changes?"
 msgstr "要捨棄變更嗎？"
+
+msgid "Dismiss"
+msgstr "取消"
 
 msgid "Edit custom lists"
 msgstr "編輯自訂清單"
@@ -2321,11 +2385,11 @@ msgstr "匯入成功，覆寫設定已啟用"
 msgid "Importing new overrides might replace some previously imported overrides."
 msgstr "匯入新的覆寫設定，可能會取代一部分先前已匯入的覆寫設定。"
 
-msgid "Install Mullvad VPN (%s) to stay up to date"
-msgstr "安裝 Mullvad VPN (%s) 以維持最新狀態"
-
 msgid "Invalid or missing value \"%s\""
 msgstr "值「%s」無效或是遺失"
+
+msgid "It looks like you’ve entered an account number instead of a voucher code. If you would like to change the active account, please log out first."
+msgstr "您輸入的似乎是帳戶，而不是憑證代碼。如果您想變更有效帳戶，請先登出。"
 
 msgid "Lets you select apps that should access the Internet directly without going through the VPN tunnel."
 msgstr "允許您選擇不經過 VPN 通道而直接存取網際網路的應用程式。"
@@ -2369,6 +2433,9 @@ msgstr "找不到位置"
 msgid "Not found"
 msgstr "找不到"
 
+msgid "On (UDP-over-TCP)"
+msgstr "開啟 (UDP-over-TCP)"
+
 msgid "Overrides active"
 msgstr "覆寫設定已啟用"
 
@@ -2394,7 +2461,7 @@ msgid "Please enter a valid remote server port"
 msgstr "請輸入有效的遠端伺服器連接埠"
 
 msgid "Please use the <b>Always-on</b> system setting instead by following the guide in <b>%s</b> above."
-msgstr "請依照前述 <b>%s</b> 中的指南，改用<b>一律啟用</b>系統設定。"
+msgstr "請依照前述 <b>%s</b> 中的指南，改用<b>一律開啟</b>系統設定。"
 
 msgid "Preferences"
 msgstr "喜好設定"
@@ -2411,8 +2478,8 @@ msgstr "遞迴限制"
 msgid "Remove"
 msgstr "移除"
 
-msgid "Remove %s from list"
-msgstr "從清單中移除 %s"
+msgid "Remove %s from %s"
+msgstr "從 %s 中移除 %s"
 
 msgid "Remove custom port"
 msgstr "移除自訂連接埠"
@@ -2429,8 +2496,11 @@ msgstr "重設覆寫設定"
 msgid "Reset to default"
 msgstr "重設為預設值"
 
+msgid "Secure my connection"
+msgstr "保護我的連線"
+
 msgid "Secured"
-msgstr "安全"
+msgstr "已受保護"
 
 msgid "Set WireGuard MTU value. Valid range: %d - %d."
 msgstr "設定 WireGuard MTU 值。有效範圍：%d - %d。"
@@ -2477,6 +2547,9 @@ msgstr "您的裝置上沒有 VPN 設定"
 msgid "This address has already been entered."
 msgstr "此地址已輸入過。"
 
+msgid "This feature isn’t available on all servers. You might need to change location after enabling."
+msgstr "此功能尚未在所有伺服器上開放。啟用後，您可能需要變更位置。"
+
 msgid "This field is required"
 msgstr "此欄位為必填項"
 
@@ -2511,11 +2584,10 @@ msgid "Unknown or prohibited key \"%s\""
 msgstr "未知或遭到禁用的金鑰「%s」"
 
 msgid "Unsecured"
-msgstr "不安全"
+msgstr "未受保護"
 
-msgctxt "Notification message shown when the app lacks a permission called \"VPN permission\"."
 msgid "Unsecured (No VPN permission)"
-msgstr "不安全 (無 VPN 權限)"
+msgstr "未受保護 (無 VPN 權限)"
 
 msgid "Update DNS server"
 msgstr "更新 DNS 伺服器"
@@ -2574,9 +2646,6 @@ msgstr "連線時，會使用所選區域的一個私密安全位置，將您的
 msgid "WireGuard MTU"
 msgstr "WireGuard MTU"
 
-msgid "WireGuard custom port"
-msgstr "WireGuard 自訂連接埠"
-
 msgid "WireGuard obfuscation"
 msgstr "WireGuard 混淆"
 
@@ -2589,10 +2658,12 @@ msgstr "您的網路流量可能正在洩露"
 msgid "You are running an unsupported app version."
 msgstr "您所執行的應用程式版本不受支援。"
 
+msgid "\"%s\" was created"
+msgstr "已建立「%s」"
+
 msgid "\"%s\" was deleted"
 msgstr "「%s」已刪除"
 
-msgctxt "Clickable link that leads to our website."
 msgid "here"
 msgstr "此處"
 
