--- a/android/lib/resource/src/main/res/values-ko/strings.xml
+++ b/android/lib/resource/src/main/res/values-ko/strings.xml
@@ -74,7 +74,7 @@
     <string name="confirm_removal">예, 장치에서 로그아웃</string>
     <string name="congrats">축하합니다!</string>
     <string name="connect">내 연결 보안 유지</string>
-    <string name="connected_using_daita">%1$s 사용 %2$s</string>
+    <string name="connected_using_daita">%1$s(%2$s 사용)</string>
     <string name="connecting">연결 중</string>
     <string name="connecting_to_daemon">Mullvad 시스템 서비스에 연결하는 중...</string>
     <string name="continue_login">로그인 계속하기</string>
@@ -84,6 +84,7 @@
     <string name="copy_account_number">계정 번호 복사</string>
     <string name="create">생성</string>
     <string name="create_account">계정 생성</string>
+    <string name="create_custom_list_message">\"%1$s\"이(가) 생성되었습니다</string>
     <string name="create_new_list">새 목록 생성</string>
     <string name="created_x">생성 날짜: %1$s</string>
     <string name="creating_new_account">계정 생성 중...</string>
@@ -98,9 +99,12 @@
     <string name="custom_port_dialog_placeholder">포트 입력</string>
     <string name="custom_port_dialog_remove">사용자 지정 포트 제거</string>
     <string name="custom_port_dialog_submit">포트 설정</string>
+    <string name="custom_port_dialog_title">%1$s 사용자 지정 포트</string>
     <string name="custom_port_dialog_valid_ranges">유효한 범위: %1$s</string>
     <string name="custom_tunnel_host_resolution_error">사용자 지정 터널의 호스트를 확인할 수 없습니다. 설정을 변경해 보세요.</string>
-    <string name="daita_info">%1$s (%2$s)은(는) 암호화 VPN 트래픽에서 패턴을 숨깁니다. 누군가가 사용자의 연결을 모니터링하고 있다면, 사용자가 방문하고 있는 웹사이트 식별을 훨씬 더 어렵게 만듭니다. 네트워크 노이즈를 세심하게 추가하고, 모든 네트워크 패킷을 같은 크기로 만듭니다.</string>
+    <string name="daita_info">%1$s(%2$s)는 암호화된 VPN 트래픽에서 패턴을 숨깁니다. 누군가가 사용자의 연결을 모니터링하고 있다면, 사용자가 방문하고 있는 웹사이트 식별을 훨씬 더 어렵게 만듭니다. 네트워크 노이즈를 세심하게 추가하고, 모든 네트워크 패킷을 같은 크기로 만들어서 이렇게 합니다.</string>
+    <string name="daita_relay_subset_warning">이 기능은 일부 서버에서 이용 가능하지 않습니다. 활성화 후 위치를 변경해야 할 수도 있습니다.</string>
+    <string name="daita_warning">주의: 이러한 방식은 총 네트워크 트래픽을 증가시키므로, 제한된 데이터 플랜 사용 시에는 유의하시기 바랍니다. 또한 네트워크 속도와 배터리 사용에 부정적인 영향을 미칠 수 있습니다.</string>
     <string name="delete">삭제</string>
     <string name="delete_custom_list_confirmation_description">\"%1$s\"을(를) 삭제하시겠습니까?</string>
     <string name="delete_custom_list_message">\"%1$s\"이(가) 삭제되었습니다</string>
@@ -181,6 +185,7 @@
     <string name="local_network_sharing_info">이 기능을 사용하면 공유, 인쇄, 스트리밍 등을 위해 로컬 네트워크의 다른 장치에 액세스할 수 있습니다.</string>
     <string name="location_added">%1$s(추가됨)</string>
     <string name="location_was_added_to_list">%1$s이(가) \"%2$s\"에 추가되었습니다</string>
+    <string name="location_was_removed_from_list">%1$s이(가) \"%2$s\"에서 제거되었습니다</string>
     <string name="locations">위치</string>
     <string name="locations_were_changed_for">\"%1$s\"에 대해 위치가 변경되었습니다</string>
     <string name="log_out">로그아웃</string>
@@ -241,6 +246,7 @@
     <string name="please_enter_a_valid_ip_address">유효한 IPv4 또는 IPv6 주소를 입력하세요</string>
     <string name="please_enter_a_valid_remote_server_port">유효한 원격 서버 포트를 입력하세요</string>
     <string name="port">포트</string>
+    <string name="port_x">포트: %1$s</string>
     <string name="privacy_disclaimer_body_first_paragraph">가장 안전한 버전인지 확인하고 현재 실행 중인 버전에 문제가 있으면 알려드리기 위해 앱에서 자동으로 버전 확인을 수행합니다. 그러면 앱 버전과 Android 시스템 버전이 Mullvad 서버로 전송됩니다. Mullvad는 사용된 앱 버전 및 Android 버전 수에 대한 카운터를 유지합니다. 이 데이터는 귀하를 식별할 수 있는 어떤 방식으로도 저장되거나 사용되지 않습니다.</string>
     <string name="privacy_disclaimer_body_second_paragraph">분할 터널링 기능을 사용하는 경우, 이 앱은 설치된 모든 애플리케이션 목록을 시스템에 쿼리합니다. 이 목록은 분할 터널링 보기에서만 검색됩니다. 설치된 애플리케이션 목록은 장치에서 전송되지 않습니다.</string>
     <string name="privacy_disclaimer_title">개인 정보 보호</string>
@@ -256,6 +262,7 @@
     <string name="redeem">사용</string>
     <string name="redeem_voucher">바우처 사용</string>
     <string name="remove_button">제거</string>
+    <string name="remove_location_from_list">%1$s 제거(%2$s에서)</string>
     <string name="rented">대여</string>
     <string name="rented_only">대여만</string>
     <string name="report_a_problem">문제 신고</string>
@@ -263,7 +270,7 @@
     <string name="save">저장</string>
     <string name="search_placeholder">검색...</string>
     <string name="secure_connection">보안 연결</string>
-    <string name="secured">안전함</string>
+    <string name="secured">보안</string>
     <string name="select_location">위치 선택</string>
     <string name="select_location_description">연결되어 있는 동안 실제 위치는 선택한 지역의 안전한 비공개 위치로 마스킹됩니다.</string>
     <string name="select_location_empty_text_first_row">&lt;b&gt;%1$s&lt;/b&gt;에 대한 결과가 없습니다.</string>
@@ -307,6 +314,7 @@
     <string name="show_account_number">계정 번호 표시</string>
     <string name="show_system_apps">시스템 앱 표시</string>
     <string name="split_tunneling_description">VPN 터널을 거치지 않고 인터넷에서 바로 액세스할 앱을 선택할 수 있습니다.</string>
+    <string name="split_tunneling_description_warning">주의: \"VPN 없이 연결 차단\"이 활성화되면, 분할 앱에 인터넷이 연결되지 않습니다. 분할 터널링 시 개인 정보가 위험해질 수 있음에 항상 유의하시기 바랍니다.</string>
     <string name="start_tunnel_error">터널 연결을 시작할 수 없습니다. 문제 보고서를 보내주세요.</string>
     <string name="submit_button">제출</string>
     <string name="switch_location">위치 전환</string>
@@ -328,12 +336,13 @@
     <string name="udp_over_tcp_port_info">UDP-over-TCP 난독 처리 프로토콜이 VPN 서버에서 연결해야 하는 TCP 포트입니다.</string>
     <string name="udp_over_tcp_port_title">UDP-over-TCP 포트</string>
     <string name="undo">실행 취소</string>
-    <string name="unsecured">안전하지 않음</string>
+    <string name="unsecured">비보안</string>
     <string name="unsecured_connection">비보안 연결</string>
-    <string name="unsecured_vpn_permission_error">보안되지 않음(VPN 권한 없음)</string>
+    <string name="unsecured_vpn_permission_error">비보안(VPN 권한 없음)</string>
     <string name="unsupported_version">지원되지 않는 버전</string>
     <string name="unsupported_version_description">지원되지 않는 이 앱 버전으로 인해 개인 정보가 위험할 수 있습니다. 지금 업데이트하세요.</string>
     <string name="unsupported_version_without_upgrade">지원되지 않는 앱 버전을 실행 중입니다.</string>
+    <string name="upd_over_tcp">UDP-over-TCP</string>
     <string name="update_available_footer">업데이트를 사용할 수 있습니다. 안전을 유지하기 위해 다운로드하세요.</string>
     <string name="update_dns_server_dialog_title">DNS 서버 업데이트</string>
     <string name="update_list_name">목록 이름 업데이트</string>
@@ -346,6 +355,7 @@
     <string name="view_logs">앱 로그 보기</string>
     <string name="virtual_adapter_problem">가상 어댑터 오류</string>
     <string name="voucher_already_used">이미 사용된 바우처 코드입니다.</string>
+    <string name="voucher_is_account_number">바우처 코드 대신 계정 번호를 입력한 것 같습니다. 활성 계정을 변경하려면 먼저 로그아웃하세요.</string>
     <string name="voucher_success_title">바우처가 성공적으로 사용되었습니다.</string>
     <string name="vpn_permission_denied_error">터널을 만드는 동안 VPN 사용 권한이 거부되었습니다. 다시 연결해 보세요.</string>
     <string name="vpn_permission_error_notification_message">상시 접속 VPN이 다른 앱에 활성화되었을 수 있습니다.</string>
