--- a/android/lib/resource/src/main/res/values-nb/strings.xml
+++ b/android/lib/resource/src/main/res/values-nb/strings.xml
@@ -43,14 +43,14 @@
     <string name="auto_connect">Automatisk tilkobling</string>
     <string name="auto_connect_and_lockdown_mode">Automatisk tilkobling og låsemodus</string>
     <string name="auto_connect_and_lockdown_mode_footer">Sørger for at enheten alltid er på VPN-tunnelen.</string>
-    <string name="auto_connect_carousel_first_slide_bottom_text">1. Etter at du har trykket på &lt;b&gt;Gå til VPN-innstillinger&lt;/b&gt; nedenfor, trykker du på tannhjulet ved siden av navnet &lt;b&gt;Mullvad VPN&lt;/b&gt;.</string>
+    <string name="auto_connect_carousel_first_slide_bottom_text">1. Etter at du har klikket på &lt;b&gt;Gå til VPN-innstillinger&lt;/b&gt;-knappen nedenfor, trykker du på tannhjulet ved siden av navnet &lt;b&gt;Mullvad VPN&lt;/b&gt;.</string>
     <string name="auto_connect_carousel_first_slide_top_text">Du finner innstillingene for automatisk tilkobling og låsemodus i Androids systeminnstillinger. Følg denne veiledningen for å aktivere én eller begge.</string>
-    <string name="auto_connect_carousel_second_slide_bottom_text">2. For å aktivere Automatisk tilkobling trykker du på bryteren ved siden av &lt;b&gt;VPN alltid på&lt;/b&gt;.</string>
+    <string name="auto_connect_carousel_second_slide_bottom_text">2. For å aktivere «Automatisk tilkobling», klikker du på bryteren ved siden av &lt;b&gt;VPN alltid på&lt;/b&gt;.</string>
     <string name="auto_connect_carousel_second_slide_top_text">Automatisk tilkobling heter «Alltid-på-VPN» i Androids systeminnstillinger og sørger for at du alltid er tilkoblet VPN-tunnelen og automatisk tilkobling etter omstart.</string>
-    <string name="auto_connect_carousel_third_slide_bottom_text">3. Klikk på bryteren ved siden av &lt;b&gt;Blokker tilkoblinger uten VPN&lt;/b&gt; for å aktivere låsemodusen.&lt;br /&gt;&lt;br /&gt;&lt;b&gt;Advarsel: Denne innstillingen blokkerer delte apper og funksjonen Deling over lokalt nettverk.&lt;/b&gt;</string>
+    <string name="auto_connect_carousel_third_slide_bottom_text">3. Klikk på bryteren ved siden av &lt;b&gt;Blokker tilkoblinger uten VPN&lt;/b&gt; for å aktivere låsemodusen.&lt;br /&gt;&lt;br /&gt;&lt;b&gt;Advarsel: Denne innstillingen blokkerer delte apper og funksjonen «Deling over lokalt nettverk».&lt;/b&gt;</string>
     <string name="auto_connect_carousel_third_slide_top_text">Låsemodusen kalles &lt;b&gt;Blokker tilkoblinger uten VPN&lt;/b&gt; i systeminnstillingene for Android. Den bidrar til å minimere lekkasjer, men den har noen kjente begrensninger som du kan lese mer om</string>
     <string name="auto_connect_carousel_third_slide_top_text_website_link">her</string>
-    <string name="auto_connect_footer_legacy">Bruk systeminnstillingen &lt;b&gt;alltid på&lt;/b&gt; i stedet for å følge veiledningen i &lt;b&gt;%1$s&lt;/b&gt; ovenfor.</string>
+    <string name="auto_connect_footer_legacy">Bruk systeminnstillingen &lt;b&gt;Alltid på&lt;/b&gt; i stedet for å følge veiledningen i &lt;b&gt;%1$s&lt;/b&gt; ovenfor.</string>
     <string name="auto_connect_footer_legacy_tv">Koble til automatisk når appen startes. Denne innstillingen vil i en fremtidig oppdatering bli erstattet med en ny funksjon for tilkobling ved oppstart av enheten.</string>
     <string name="auto_connect_legacy">Automatisk tilkobling (eldre)</string>
     <string name="automatic">Automatisk</string>
@@ -84,6 +84,7 @@
     <string name="copy_account_number">Kopier kontonummer</string>
     <string name="create">Opprett</string>
     <string name="create_account">Opprett konto</string>
+    <string name="create_custom_list_message">«%1$s» ble opprettet</string>
     <string name="create_new_list">Opprett ny liste</string>
     <string name="created_x">Opprettet: %1$s</string>
     <string name="creating_new_account">Oppretter konto ...</string>
@@ -98,9 +99,12 @@
     <string name="custom_port_dialog_placeholder">Skriv inn port</string>
     <string name="custom_port_dialog_remove">Fjern tilpasset port</string>
     <string name="custom_port_dialog_submit">Konfigurer port</string>
+    <string name="custom_port_dialog_title">%1$s tilpasset port</string>
     <string name="custom_port_dialog_valid_ranges">Gyldige verdiområder: %1$s</string>
     <string name="custom_tunnel_host_resolution_error">Kunne ikke løse vert for egendefinert tunnel. Forsøk å endre innstillingene dine.</string>
     <string name="daita_info">%1$s (%2$s) skjuler mønstre i den krypterte VPN-trafikken. Hvis noen overvåker tilkoblingen din, gjør dette det betydelig vanskeligere for dem å identifisere hvilke nettsteder du besøker. Dette gjøres ved varsomt å legge til nettverksstøy og gjøre alle nettverkspakker like store.</string>
+    <string name="daita_relay_subset_warning">Denne funksjonen er ikke tilgjengelig på alle servere. Det kan hende du må endre plassering etter aktivering.</string>
+    <string name="daita_warning">Merk: Siden dette øker den totale nettverkstrafikken, bør du være forsiktig hvis du har et abonnement med begrenset data. Det kan også negativt påvirke nettverkshastigheten og batteribruken.</string>
     <string name="delete">Slett</string>
     <string name="delete_custom_list_confirmation_description">Slette «%1$s»?</string>
     <string name="delete_custom_list_message">«%1$s» ble slettet</string>
@@ -119,7 +123,7 @@
     <string name="disconnect">Koble fra</string>
     <string name="disconnecting">Kobler fra</string>
     <string name="dismiss">Ignorer</string>
-    <string name="dns_content_blockers_custom_dns_warning">OBS: Denne innstillingen kan ikke brukes sammen med &lt;b&gt;Bruk egendefinert DNS-server&lt;/b&gt;.</string>
+    <string name="dns_content_blockers_custom_dns_warning">Merk: Denne innstillingen kan ikke brukes sammen med &lt;b&gt;Bruk egendefinert DNS-server&lt;/b&gt;.</string>
     <string name="dns_content_blockers_info">Når denne funksjonen er aktivert, forhindrer den enheten fra å kontakte bestemte domener og nettsteder som er kjent for å spre annonser, skadelig programvare, sporingsenheter og mer.</string>
     <string name="dns_content_blockers_subtitle">Deaktiver &lt;b&gt;%1$s&lt;/b&gt; under for å aktivere innstillingene.</string>
     <string name="dns_content_blockers_title">DNS-innholdsblokkering</string>
@@ -181,6 +185,7 @@
     <string name="local_network_sharing_info">Funksjonen gir tilgang til andre enheter på det lokale nettverket for ting som deling, utskrift, strømming osv.</string>
     <string name="location_added">%1$s (lagt til)</string>
     <string name="location_was_added_to_list">%1$s ble lagt til «%2$s»</string>
+    <string name="location_was_removed_from_list">%1$s ble fjernet fra «%2$s»</string>
     <string name="locations">Plasseringer</string>
     <string name="locations_were_changed_for">Plasseringer ble endret for «%1$s»</string>
     <string name="log_out">Logg ut</string>
@@ -241,6 +246,7 @@
     <string name="please_enter_a_valid_ip_address">Skriv inn en gyldig IPv4- eller IPv6-adresse</string>
     <string name="please_enter_a_valid_remote_server_port">Skriv inn en gyldig ekstern server-port</string>
     <string name="port">Port</string>
+    <string name="port_x">Port: %1$s</string>
     <string name="privacy_disclaimer_body_first_paragraph">For å sørge for at du har den sikreste appversjonen, og informere deg om eventuelle problemer med den versjonen som kjøres, vil appen automatisk sjekke appversjonen. Appversjonen og Android-systemversjonen blir da sendt til Mullvad-servere. Mullvad registrerer antallet brukte appversjoner og Android-versjoner. Dataen blir aldri lagret eller brukt på noen som helst måte som kan identifisere deg.</string>
     <string name="privacy_disclaimer_body_second_paragraph">Hvis funksjonen delt tunnelering brukes, vil appen be systemet ditt om en liste over alle installerte applikasjoner. Denne listen hentes bare i delt tunnelering-visningen. Listen over installerte apper sendes aldri ut fra enheten.</string>
     <string name="privacy_disclaimer_title">Personvern</string>
@@ -256,6 +262,7 @@
     <string name="redeem">Løs inn</string>
     <string name="redeem_voucher">Løs inn kupong</string>
     <string name="remove_button">Fjern</string>
+    <string name="remove_location_from_list">Fjern %1$s fra %2$s</string>
     <string name="rented">Leid</string>
     <string name="rented_only">Kun leid</string>
     <string name="report_a_problem">Rapporter et problem</string>
@@ -307,6 +314,7 @@
     <string name="show_account_number">Vis kontonummer</string>
     <string name="show_system_apps">Vis systemapper</string>
     <string name="split_tunneling_description">Lar deg velge apper som skal få tilgang til internett direkte uten å gå gjennom VPN-tunnelen.</string>
+    <string name="split_tunneling_description_warning">Merk: Hvis «Blokker tilkoblinger uten VPN» er aktivert, har ikke splittede apper internettilgang. Ha i bakhodet at «split tunneling» er en personvernrisiko.</string>
     <string name="start_tunnel_error">Kunne ikke starte tunneltilkobling. Send inn en problemrapport.</string>
     <string name="submit_button">Send inn</string>
     <string name="switch_location">Bytt plassering</string>
@@ -334,6 +342,7 @@
     <string name="unsupported_version">VERSJON UTEN STØTTE</string>
     <string name="unsupported_version_description">Personvernet ditt kan være i fare med denne appversjonen som ikke støttes. Oppdater nå.</string>
     <string name="unsupported_version_without_upgrade">Du kjører en appversjon som ikke støttes.</string>
+    <string name="upd_over_tcp">UDP-over-TCP</string>
     <string name="update_available_footer">Oppdatering tilgjengelig. Last ned for å oppdatere sikkerheten.</string>
     <string name="update_dns_server_dialog_title">Oppdater DNS-serveren</string>
     <string name="update_list_name">Oppdater listenavn</string>
@@ -346,6 +355,7 @@
     <string name="view_logs">Se applogger</string>
     <string name="virtual_adapter_problem">Virtuell adapterfeil</string>
     <string name="voucher_already_used">Kupongkoden er allerede brukt.</string>
+    <string name="voucher_is_account_number">Det ser ut til at du har oppgitt et kontonummer i stedet for en kupongkode. Hvis du vil endre den aktive kontoen, må du først logge ut.</string>
     <string name="voucher_success_title">Kupongkoden er løst inn.</string>
     <string name="vpn_permission_denied_error">VPN-tillatelse ble avvist under opprettelsen av tunnelen. Prøv å koble til igjen.</string>
     <string name="vpn_permission_error_notification_message">VPN som alltid er på, kan være aktivert for en annen app</string>
