--- a/android/lib/resource/src/main/res/values-sv/strings.xml
+++ b/android/lib/resource/src/main/res/values-sv/strings.xml
@@ -51,7 +51,7 @@
     <string name="auto_connect_carousel_third_slide_top_text">Låsningsläget kallas &lt;b&gt;Blockera anslutningar utan VPN&lt;/b&gt; i systeminställningarna på Android. Det minimerar läckor men det finns några kända begränsningar som du kan läsa mer om</string>
     <string name="auto_connect_carousel_third_slide_top_text_website_link">här</string>
     <string name="auto_connect_footer_legacy">Använd systeminställningen &lt;b&gt;Alltid aktiverat&lt;/b&gt; istället genom att följa guiden i &lt;b&gt;%1$s&lt;/b&gt; ovan.</string>
-    <string name="auto_connect_footer_legacy_tv">Ansluts automatiskt när appen startar. Inställningen kommer i en kommande uppdatering att ersättas av en ny funktion som ansluter enheten när den startas.</string>
+    <string name="auto_connect_footer_legacy_tv">Ansluts automatiskt när appen startar. Inställningen kommer i en kommande uppdatering ersättas av en ny funktion som ansluter enheten när den startas.</string>
     <string name="auto_connect_legacy">Anslut automatiskt (äldre)</string>
     <string name="automatic">Automatisk</string>
     <string name="back">Tillbaka</string>
@@ -84,6 +84,7 @@
     <string name="copy_account_number">Kopiera kontonummer</string>
     <string name="create">Skapa</string>
     <string name="create_account">Skapa konto</string>
+    <string name="create_custom_list_message">\"%1$s\" har skapats</string>
     <string name="create_new_list">Skapa ny lista</string>
     <string name="created_x">Skapades: %1$s</string>
     <string name="creating_new_account">Skapar konto...</string>
@@ -98,9 +99,12 @@
     <string name="custom_port_dialog_placeholder">Ange port</string>
     <string name="custom_port_dialog_remove">Ta bort anpassad port</string>
     <string name="custom_port_dialog_submit">Ställ in port</string>
+    <string name="custom_port_dialog_title">%1$s anpassad port</string>
     <string name="custom_port_dialog_valid_ranges">Giltiga intervall: %1$s</string>
     <string name="custom_tunnel_host_resolution_error">Det går inte att lösa värd för anpassad tunnel. Försök att ändra inställningarna.</string>
     <string name="daita_info">%1$s (%2$s) döljer mönster i din krypterade VPN-trafik. Om någon övervakar din anslutning blir det mycket svårare för hen att identifiera vilka webbplatser du besöker. Den gör det genom att noggrant lägga till nätverksbrus och se till så att alla nätverkspaket har samma storlek.</string>
+    <string name="daita_relay_subset_warning">Det här funktionen är inte tillgänglig på alla servrar. Du kanske måste ändra plats efter aktivering.</string>
+    <string name="daita_warning">Obs! Detta ökar nätverkstrafiken så var försiktig om du har ett abonnemang med begränsad mängd data. Det kan även ha en negativ påverkan på din nätverkshastighet och batterianvändning.</string>
     <string name="delete">Ta bort</string>
     <string name="delete_custom_list_confirmation_description">Ta bort \"%1$s\"?</string>
     <string name="delete_custom_list_message">\"%1$s\" har tagits bort</string>
@@ -181,6 +185,7 @@
     <string name="local_network_sharing_info">Funktionen tillåter åtkomst till andra enheter på det lokala nätverket, t.ex. för att dela, skriva ut, streama osv.</string>
     <string name="location_added">%1$s (har lagts till)</string>
     <string name="location_was_added_to_list">%1$s har lagts till i \"%2$s\"</string>
+    <string name="location_was_removed_from_list">%1$s har tagits bort från \"%2$s\"</string>
     <string name="locations">Platser</string>
     <string name="locations_were_changed_for">Platserna har ändrats för \"%1$s\"</string>
     <string name="log_out">Logga ut</string>
@@ -241,6 +246,7 @@
     <string name="please_enter_a_valid_ip_address">Ange en giltig IPv4- eller IPv6-adress</string>
     <string name="please_enter_a_valid_remote_server_port">Ange en giltig fjärrserverport</string>
     <string name="port">Port</string>
+    <string name="port_x">Port: %1$s</string>
     <string name="privacy_disclaimer_body_first_paragraph">Appen genomför automatiska versionskontroller för att se till att du har den säkraste versionen och för att informera dig om problem med den nuvarande versionen. Appversionen och Android-systemversionen skickas till Mullvad-servrarna. Mullvad registrerar antalet använda appversioner och Android-versioner. Dessa data lagras aldrig och används inte på något sätt som kan identifiera dig.</string>
     <string name="privacy_disclaimer_body_second_paragraph">Om delade tunnlar används, frågar appen ditt system om en lista med alla installerade applikationer. Listan hämtas bara i vyn för delade tunnlar. Listan med installerade applikationer skickas aldrig från enheten.</string>
     <string name="privacy_disclaimer_title">Sekretess</string>
@@ -256,6 +262,7 @@
     <string name="redeem">Lös in</string>
     <string name="redeem_voucher">Lös in kupong</string>
     <string name="remove_button">Ta bort</string>
+    <string name="remove_location_from_list">Ta bort %1$s från %2$s</string>
     <string name="rented">Hyrd</string>
     <string name="rented_only">Endast hyrd</string>
     <string name="report_a_problem">Rapportera ett problem</string>
@@ -307,6 +314,7 @@
     <string name="show_account_number">Visa kontonummer</string>
     <string name="show_system_apps">Visa systemappar</string>
     <string name="split_tunneling_description">Låter dig välja appar som ska ge dig direktåtkomst till internet utan att gå igenom VPN-tunneln.</string>
+    <string name="split_tunneling_description_warning">Obs! Om \"Blockera anslutningar utan VPN\" är aktiverat kommer inte delade appar att ha internet. Kom ihåg att det alltid finns en säkerhetsrisk med delade tunnlar.</string>
     <string name="start_tunnel_error">Det går inte att starta tunnelanslutning. Skicka en problemrapport.</string>
     <string name="submit_button">Skicka</string>
     <string name="switch_location">Växla plats</string>
@@ -334,6 +342,7 @@
     <string name="unsupported_version">VERSION UTAN STÖD</string>
     <string name="unsupported_version_description">Din sekretess kan vara utsatt för risk med den här appversionen som inte stöds. Uppdatera nu.</string>
     <string name="unsupported_version_without_upgrade">Du kör en appversion som inte stöds.</string>
+    <string name="upd_over_tcp">UDP över TCP</string>
     <string name="update_available_footer">Uppdatering tillgänglig. Ladda ned för att vara säker.</string>
     <string name="update_dns_server_dialog_title">Uppdatera DNS-server</string>
     <string name="update_list_name">Uppdatera listnamn</string>
@@ -346,6 +355,7 @@
     <string name="view_logs">Visa appens loggar</string>
     <string name="virtual_adapter_problem">Fel med virtuell adapter</string>
     <string name="voucher_already_used">Kupongkoden har redan använts.</string>
+    <string name="voucher_is_account_number">Det verkar som om du angett ett kontonummer istället för en kupongkod. Logga först ut om du vill ändra den aktiva koden.</string>
     <string name="voucher_success_title">Kupongen har lösts in.</string>
     <string name="vpn_permission_denied_error">VPN-behörighet nekades när tunneln skapades. Försök att ansluta igen.</string>
     <string name="vpn_permission_error_notification_message">VPN som alltid är på kan ha aktiverats för annan app</string>
