--- a/gui/locales/da/messages.po
+++ b/gui/locales/da/messages.po
@@ -10,7 +10,10 @@ msgstr ""
 "Project-Id-Version: mullvad-app\n"
 "Language-Team: Danish\n"
 "Language: da_DK\n"
-"PO-Revision-Date: 2024-06-27 08:16\n"
+"PO-Revision-Date: 2024-10-09 14:55\n"
+
+msgid "%(amount)d more..."
+msgstr "%(amount)d mere..."
 
 msgid "%(duration)s was added, account paid until %(expiry)s."
 msgstr "%(duration)s blev tilføjet, konto betalt indtil %(expiry)s."
@@ -96,8 +99,14 @@ msgstr "Tilslut"
 msgid "Connected"
 msgstr "Tilsluttet"
 
+msgid "CONNECTED"
+msgstr "FORBUNDET"
+
 msgid "Connecting"
 msgstr "Tilslutter"
+
+msgid "CONNECTING..."
+msgstr "OPRETTER FORBINDELSE..."
 
 #. Creating a secure connection that isn't breakable by quantum computers.
 msgid "CREATING QUANTUM SECURE CONNECTION"
@@ -108,6 +117,11 @@ msgstr "OPRETTER SIKKER FORBINDELSE"
 
 msgid "Custom"
 msgstr "Brugerdefineret"
+
+#. This refers to the Custom DNS setting in the VPN settings view. This is
+#. displayed when the feature is on.
+msgid "Custom DNS"
+msgstr "Brugerdefineret DNS"
 
 msgid "Default"
 msgstr "Standard"
@@ -121,6 +135,9 @@ msgstr "Slet liste"
 msgid "Disable"
 msgstr "Deaktiver"
 
+msgid "Disable anyway"
+msgstr "Deaktiver alligevel"
+
 msgid "Disconnect"
 msgstr "Afbryd forbindelse"
 
@@ -130,11 +147,14 @@ msgstr "Afbryd og afslut"
 msgid "Disconnected"
 msgstr "Afbrudt"
 
+msgid "DISCONNECTED"
+msgstr "AFBRUDT"
+
 msgid "Disconnecting"
 msgstr "Afbryder"
 
-msgid "Dismiss"
-msgstr "Afvis"
+msgid "DISCONNECTING..."
+msgstr "AFBRYDER..."
 
 msgid "Edit"
 msgstr "Rediger"
@@ -176,6 +196,11 @@ msgstr "mindre end én dag"
 msgid "less than a day left"
 msgstr "mindre end én dag tilbage"
 
+#. This refers to the multihop setting in the VPN settings view. This is
+#. displayed when the feature is on.
+msgid "Multihop"
+msgstr "Multihop"
+
 msgid "Name"
 msgstr "Navn"
 
@@ -202,6 +227,11 @@ msgstr "Adgangskode"
 
 msgid "Port"
 msgstr "Port"
+
+#. This refers to the quantum resistance setting in the WireGuard settings view.
+#. This is displayed when the feature is on.
+msgid "Quantum resistance"
+msgstr "Kvantemodstand"
 
 #. The connection is secure and isn't breakable by quantum computers.
 msgid "QUANTUM SECURE CONNECTION"
@@ -340,11 +370,19 @@ msgctxt "accessibility"
 msgid "Select location. Current location is %(location)s"
 msgstr "Vælg placering. Nuværende placering er %(location)s"
 
+msgctxt "accessibility"
+msgid "Shadowsocks settings"
+msgstr "Shadowsocks-indstillinger"
+
 #. Provided to accessibility tools such as screenreaders to describe
 #. the button which unobscures the account number.
 msgctxt "accessibility"
 msgid "Show account number"
 msgstr "Vis kontonummer"
+
+msgctxt "accessibility"
+msgid "UDP-over-TCP settings"
+msgstr "UDP-over-TCP-indstillinger"
 
 #. Title label in navigation bar
 msgctxt "account-view"
@@ -570,8 +608,16 @@ msgid "%(city)s (%(hostname)s)"
 msgstr "%(city)s (%(hostname)s)"
 
 msgctxt "connect-view"
+msgid "Active features"
+msgstr "Aktive funktioner"
+
+msgctxt "connect-view"
 msgid "Congrats!"
 msgstr "Tillykke!"
+
+msgctxt "connect-view"
+msgid "Connection details"
+msgstr "Forbindelsesoplysninger"
 
 msgctxt "connect-view"
 msgid "Disconnect"
@@ -645,12 +691,6 @@ msgctxt "connect-view"
 msgid "You’re all set!"
 msgstr "Du er klar!"
 
-#. %(hostname)s - The current server the app is connected to, e.g. "se-got-wg-001 using DAITA"
-#. %(daita)s - Will be replaced with "DAITA"
-msgctxt "connection-info"
-msgid "%(hostname)s using %(daita)s"
-msgstr "%(hostname)s via %(daita)s"
-
 #. The hostname line displayed below the country on the main screen
 #. Available placeholders:
 #. %(relay)s - the relay hostname
@@ -662,14 +702,6 @@ msgstr "%(relay)s via %(entry)s"
 msgctxt "connection-info"
 msgid "%(relay)s via Custom bridge"
 msgstr "%(relay)s via brugerdefineret bro"
-
-#. The tunnel type line displayed below the hostname line on the main screen
-#. Available placeholders:
-#. %(tunnelType)s - the tunnel type, i.e OpenVPN
-#. %(bridgeType)s - the bridge type, i.e Shadowsocks
-msgctxt "connection-info"
-msgid "%(tunnelType)s via %(bridgeType)s"
-msgstr "%(tunnelType)s via %(bridgeType)s"
 
 msgctxt "connection-info"
 msgid "In"
@@ -1501,6 +1533,9 @@ msgctxt "settings-view"
 msgid "Support"
 msgstr "Support"
 
+msgid "%s custom port"
+msgstr "%s brugerdefineret port"
+
 msgctxt "settings-view"
 msgid "Update available. Install the latest app version to stay up to date."
 msgstr "Opdatering tilgængelig. Installer den nyeste appversion for at holde dig opdateret."
@@ -1761,8 +1796,8 @@ msgid "Update your kernel."
 msgstr "Opdater din kerne."
 
 msgctxt "tunnel-control"
-msgid "Secure my connection"
-msgstr "Gør min forbindelse sikker"
+msgid "Connect"
+msgstr "Opret forbindelse"
 
 msgctxt "tunnel-control"
 msgid "Switch location"
@@ -1889,7 +1924,7 @@ msgstr "Aktiver IPv6"
 #. The label next to the multihop settings toggle.
 msgctxt "vpn-settings-view"
 msgid "Enable multihop"
-msgstr "Aktiver multihop"
+msgstr "Aktivér multihop"
 
 msgctxt "vpn-settings-view"
 msgid "Enable to add at least one DNS server."
@@ -2025,6 +2060,16 @@ msgctxt "wireguard-settings-nav"
 msgid "%(wireguard)s settings"
 msgstr "%(wireguard)s-indstillinger"
 
+#. Title label in navigation bar
+msgctxt "wireguard-settings-nav"
+msgid "Shadowsocks"
+msgstr "Shadowsocks"
+
+#. Title label in navigation bar
+msgctxt "wireguard-settings-nav"
+msgid "UDP-over-TCP"
+msgstr "UDP-over-TCP"
+
 msgctxt "wireguard-settings-view"
 msgid "%(daita)s (%(daitaFull)s) hides patterns in your encrypted VPN traffic. If anyone is monitoring your connection, this makes it significantly harder for them to identify what websites you are visiting. It does this by carefully adding network noise and making all network packets the same size."
 msgstr "%(daita)s (%(daitaFull)s) skjuler mønstre i din krypterede VPN-trafik. Hvis nogen overvåger din forbindelse, gør dette det betydeligt sværere for dem at identificere, hvilke websteder du besøger. Mønstrene skjules ved omhyggeligt at tilføje netværksstøj og gøre alle netværkspakker lige store."
@@ -2036,8 +2081,8 @@ msgid "%(wireguard)s settings"
 msgstr "%(wireguard)s-indstillinger"
 
 msgctxt "wireguard-settings-view"
-msgid "Attention: Since this increases your total network traffic, be cautious if you have a limited data plan. It can also negatively impact your network speed. Please consider this if you want to enable %(daita)s."
-msgstr "Bemærk: Da dette øger din samlede netværkstrafik, skal du være forsigtig, hvis du har et abonnement med begrænset datamængde. Det kan også påvirke din netværkshastighed negativt. Overvej dette, hvis du vil aktivere %(daita)s."
+msgid "Hides patterns in your encrypted VPN traffic. Since this increases your total network traffic, be cautious if you have a limited data plan. It can also negatively impact your network speed and battery usage."
+msgstr "Skjuler mønstre i din krypterede VPN-trafik. Da dette øger din samlede netværkstrafik, skal du være forsigtig, hvis du har et dataabonnement med begrænsninger. Det kan også påvirke din netværkshastighed og dit batteriforbrug negativt."
 
 msgctxt "wireguard-settings-view"
 msgid "IP version"
@@ -2060,12 +2105,15 @@ msgid "Obfuscation hides the WireGuard traffic inside another protocol. It can b
 msgstr "Tilsløring skjuler WireGuard-trafikken inden i en anden protokol. Det kan bruges til at hjælpe med at omgå censur og andre typer filtrering, hvor en almindelig WireGuard-forbindelse ville blive blokeret."
 
 msgctxt "wireguard-settings-view"
-msgid "On (UDP-over-TCP)"
-msgstr "Til (UDP-over-TCP)"
-
-msgctxt "wireguard-settings-view"
 msgid "Port"
 msgstr "Port"
+
+#. Text showing currently selected port.
+#. Available placeholders:
+#. %(port)s - Can be either a number between 1 and 65000 or the text "Automatic".
+msgctxt "wireguard-settings-view"
+msgid "Port: %(port)s"
+msgstr "Port: %(port)s"
 
 #. The title for the WireGuard quantum resistance selector. This setting
 #. makes the cryptography resistant to the future abilities of quantum
@@ -2084,6 +2132,10 @@ msgid "Set %(wireguard)s MTU value. Valid range: %(min)d - %(max)d."
 msgstr "Indstil %(wireguard)s MTU-værdi. Gyldigt område: %(min)d - %(max)d."
 
 msgctxt "wireguard-settings-view"
+msgid "Shadowsocks"
+msgstr "Shadowsocks"
+
+msgctxt "wireguard-settings-view"
 msgid "The automatic setting will randomly choose from the valid port ranges shown below."
 msgstr "Den automatiske indstilling vælger tilfældigt fra de gyldige rækker af porte nedenfor."
 
@@ -2098,18 +2150,22 @@ msgctxt "wireguard-settings-view"
 msgid "This allows access to %(wireguard)s for devices that only support IPv6."
 msgstr "Dette giver adgang til %(wireguard)s for enheder, der kun understøtter IPv6."
 
-#. Warning text in a dialog that is displayed after a setting is toggled.
-msgctxt "wireguard-settings-view"
-msgid "This feature isn't available on all servers. You might need to change location after enabling."
-msgstr "Denne funktion er ikke tilgængelig på alle servere. Du skal muligvis ændre placering efter aktivering."
-
 msgctxt "wireguard-settings-view"
 msgid "This feature makes the WireGuard tunnel resistant to potential attacks from quantum computers."
 msgstr "Denne funktion gør WireGuard-tunnelen modstandsdygtig over for potentielle angreb fra kvantecomputere."
 
 msgctxt "wireguard-settings-view"
+msgid "UDP-over-TCP"
+msgstr "UDP-over-TCP"
+
+msgctxt "wireguard-settings-view"
 msgid "UDP-over-TCP port"
 msgstr "UDP-over-TCP-port"
+
+#. Text describing the valid port range for a port selector.
+msgctxt "wireguard-settings-view"
+msgid "Valid range: %(min)s - %(max)s"
+msgstr "Gyldigt interval: %(min)s - %(max)s"
 
 msgctxt "wireguard-settings-view"
 msgid "Which TCP port the UDP-over-TCP obfuscation protocol should connect to on the VPN server."
@@ -2118,20 +2174,27 @@ msgstr "Hvilken TCP-port UDP-over-TCP tilsløringsprotokollen skal forbinde til 
 msgid "%s (added)"
 msgstr "%s (tilføjet)"
 
+msgctxt "String explaining where the user is connected and whether the connection is \"using\" a specific feature. So the first placeholder is a location and the second is a named feature. Example: \"gb-lon-wg-304 using DAITA\" (where \"gb-lon-wg-304\" is the location and \"DAITA\" is the named feature)"
+msgid "%s using %s"
+msgstr "%s, der bruger %s"
+
 msgid "%s was added to \"%s\""
 msgstr "%s blev tilføjet til \"%s\""
 
 msgid "%s was added to your account."
 msgstr "%s blev føjet til din konto."
 
+msgid "%s was removed from \"%s\""
+msgstr "%s blev fjernet fra \"%s\""
+
 msgid "1. After clicking on the <b>Go to VPN settings</b> button below, click on the cogwheel next to the <b>Mullvad VPN</b> name."
-msgstr "1. Når du har klikket på knappen <b>Gå til VPN-indstillinger</b> nedenfor, skal du klikke på tandhjulet ved siden af <b>Mullvad VPN</b>-navnet."
+msgstr "1. Når du har klikket på knappen <b>Gå til VPN-indstillinger</b> nedenfor, skal du klikke på tandhjulet ved siden af navnet <b>Mullvad VPN</b>."
 
 msgid "2. To enable Auto-connect, click on the toggle next to <b>Always-on VPN</b>."
-msgstr "2. For at aktivere automatisk forbindelse skal du klikke på knappen ud for <b>Altid-til VPN</b>."
+msgstr "2. For at aktivere automatisk forbindelse skal du klikke på knappen ved siden af <b>Altid-til VPN</b>."
 
 msgid "3. To enable Lockdown mode, click on the toggle next to <b>Block connections without VPN</b>.<br /><br /><b>Warning: This setting blocks split apps and the Local Network Sharing feature.</b>"
-msgstr "3. For at aktivere Lockdown-tilstand skal du klikke på knappen ud for <b>Bloker forbindelser uden VPN</b>.<br /><br /><b>Advarsel: Denne indstilling blokerer split-apps og funktionen Lokal netværksdeling. </b>"
+msgstr "3. For at aktivere Lockdown-tilstand skal du klikke på knappen ved siden af <b>Bloker forbindelser uden VPN</b>.<br /><br /><b>Advarsel: Denne indstilling blokerer delte apps og funktionen Lokal netværksdeling. </b>"
 
 msgid "30 days was added to your account."
 msgstr "30 dage blev føjet til din konto."
@@ -2190,17 +2253,17 @@ msgstr "Altid-til VPN er måske aktiveret for en anden app"
 msgid "At least one method needs to be enabled"
 msgstr "Mindst én metode skal aktiveres"
 
-msgid "Attention: Split tunneling is a privacy risk."
-msgstr "Bemærk: Split tunneling udgør en privatlivsrisiko."
+msgid "Attention: If \"Block connections without VPN\" is enabled, split apps will not have Internet. Always keep in mind that split tunneling is a privacy risk."
+msgstr "Bemærk: Hvis \"Bloker forbindelser uden VPN\" er aktiveret, vil delte apps ikke have internet. Husk altid, at delt tunnelføring er en risiko for privatlivets fred."
+
+msgid "Attention: Since this increases your total network traffic, be cautious if you have a limited data plan. It can also negatively impact your network speed and battery usage."
+msgstr "Bemærk: Da dette øger din samlede netværkstrafik, skal du være forsigtig, hvis du har et abonnement med begrænset datamængde. Det kan også påvirke din netværkshastighed og dit batteriforbrug negativt."
 
 msgid "Attention: this setting cannot be used in combination with <b>Use custom DNS server</b>."
-msgstr "Bemærk: Denne indstilling kan ikke bruges i kombination med <b>Brug tilpasset DNS-server</b>."
+msgstr "Bemærk: Denne indstilling kan ikke bruges i kombination med <b>Brug brugerdefineret DNS-server</b>."
 
 msgid "Auto-connect & Lockdown mode"
 msgstr "Auto-tilslutning og Lockdown-tilstand"
-
-msgid "Auto-connect & \\nLockdown mode"
-msgstr "Auto-tilslutning og \\nLockdown-tilstand"
 
 msgid "Auto-connect (legacy)"
 msgstr "Automatisk forbindelse (ældre metode)"
@@ -2208,9 +2271,8 @@ msgstr "Automatisk forbindelse (ældre metode)"
 msgid "Auto-connect is called Always-on VPN in the Android system settings and it makes sure you are constantly connected to the VPN tunnel and auto connects after restart."
 msgstr "Auto-tilslutning kaldes Altid-til VPN i Android-systemindstillingerne, og det sørger for, at du konstant er forbundet til VPN-tunnelen og automatisk forbinder efter genstart."
 
-msgctxt "Description of the existing \"auto-connect\" functionality as well as a notification about it being removed/replaced in a future update."
 msgid "Automatically connect when the app launches. This setting will be replaced with a new connect on device start-up feature in a future update."
-msgstr "Tilslut automatisk, når appen starter. Denne indstilling vil blive erstattet med en ny funktion der opretter forbindelse ved opstart af enheden i en fremtidig opdatering."
+msgstr "Opret automatisk forbindelse, når appen starter. Denne indstilling vil blive erstattet med en ny funktion der opretter forbindelse ved opstart af enheden i en fremtidig opdatering."
 
 msgid "Blocking internet (device offline)"
 msgstr "Blokering af internet (enhed offline)"
@@ -2239,7 +2301,6 @@ msgstr "Opret ny liste"
 msgid "Critical error (your attention is required)"
 msgstr "Kritisk fejl (som kræver din opmærksomhed)"
 
-msgctxt "Status information about which method/configuration is actively being used. The placeholder is replaced by a built-in or custom method. For example \"Current: Direct\" or \"Current: MyCustomMethod\". Note that it's not \"current\" as in \"present time\"."
 msgid "Current: %s"
 msgstr "Aktuel: %s"
 
@@ -2266,6 +2327,9 @@ msgstr "Kassér"
 
 msgid "Discard changes?"
 msgstr "Vil du kassere ændringer?"
+
+msgid "Dismiss"
+msgstr "Afvis"
 
 msgid "Edit custom lists"
 msgstr "Rediger tilpassede lister"
@@ -2327,11 +2391,11 @@ msgstr "Importen lykkedes, tilsidesættelser aktive"
 msgid "Importing new overrides might replace some previously imported overrides."
 msgstr "Import af nye tilsidesættelser vil muligvis erstatte nogle tidligere importerede tilsidesættelser."
 
-msgid "Install Mullvad VPN (%s) to stay up to date"
-msgstr "Installer Mullvad VPN (%s) for at holde dig opdateret"
-
 msgid "Invalid or missing value \"%s\""
 msgstr "Ugyldig eller manglende værdi \"%s\""
+
+msgid "It looks like you’ve entered an account number instead of a voucher code. If you would like to change the active account, please log out first."
+msgstr "Det ser ud til, at du har indtastet et kontonummer i stedet for en rabatkuponkode. Hvis du vil ændre den aktive konto, skal du først logge ud."
 
 msgid "Lets you select apps that should access the Internet directly without going through the VPN tunnel."
 msgstr "Giver dig mulighed for at vælge apps, der skal have direkte adgang til internettet uden at gå gennem VPN-tunnelen."
@@ -2375,6 +2439,9 @@ msgstr "Ingen placeringer fundet"
 msgid "Not found"
 msgstr "Ikke fundet"
 
+msgid "On (UDP-over-TCP)"
+msgstr "Til (UDP-over-TCP)"
+
 msgid "Overrides active"
 msgstr "Tilsidesættelser aktive"
 
@@ -2417,8 +2484,8 @@ msgstr "Rekursionsgrænse"
 msgid "Remove"
 msgstr "Fjern"
 
-msgid "Remove %s from list"
-msgstr "Fjern %s fra listen"
+msgid "Remove %s from %s"
+msgstr "Fjern %s fra %s"
 
 msgid "Remove custom port"
 msgstr "Fjern brugerdefineret port"
@@ -2434,6 +2501,9 @@ msgstr "Nulstil tilsidesættelser"
 
 msgid "Reset to default"
 msgstr "Nulstil til standard"
+
+msgid "Secure my connection"
+msgstr "Gør min forbindelse sikker"
 
 msgid "Secured"
 msgstr "Sikret"
@@ -2483,6 +2553,9 @@ msgstr "Der er ingen VPN-indstillinger på din enhed"
 msgid "This address has already been entered."
 msgstr "Denne adresse er allerede blevet indtastet."
 
+msgid "This feature isn’t available on all servers. You might need to change location after enabling."
+msgstr "Denne funktion er ikke tilgængelig på alle servere. Du skal muligvis ændre placering efter aktivering."
+
 msgid "This field is required"
 msgstr "Dette felt er påkrævet"
 
@@ -2519,9 +2592,8 @@ msgstr "Ukendt eller ikke-tilladt nøgle \"%s\""
 msgid "Unsecured"
 msgstr "Ikke sikret"
 
-msgctxt "Notification message shown when the app lacks a permission called \"VPN permission\"."
 msgid "Unsecured (No VPN permission)"
-msgstr "Usikret (ingen VPN-tilladelse)"
+msgstr "Ikke sikret (ingen VPN-tilladelse)"
 
 msgid "Update DNS server"
 msgstr "Opdater DNS-server"
@@ -2580,9 +2652,6 @@ msgstr "Når du er tilsluttet, maskeres din virkelige placering med en privat og
 msgid "WireGuard MTU"
 msgstr "WireGuard MTU"
 
-msgid "WireGuard custom port"
-msgstr "Brugerdefineret WireGuard-port"
-
 msgid "WireGuard obfuscation"
 msgstr "WireGuard-tilsløring"
 
@@ -2595,10 +2664,12 @@ msgstr "DU LÆKKER MÅSKE NETVÆRKSTRAFIK"
 msgid "You are running an unsupported app version."
 msgstr "Du kører en ikke-understøttet appversion."
 
+msgid "\"%s\" was created"
+msgstr "\"%s\" blev oprettet"
+
 msgid "\"%s\" was deleted"
 msgstr "\"%s\" blev slettet"
 
-msgctxt "Clickable link that leads to our website."
 msgid "here"
 msgstr "her"
 
