--- a/gui/locales/es/messages.po
+++ b/gui/locales/es/messages.po
@@ -10,7 +10,10 @@ msgstr ""
 "Project-Id-Version: mullvad-app\n"
 "Language-Team: Spanish\n"
 "Language: es_ES\n"
-"PO-Revision-Date: 2024-06-27 08:16\n"
+"PO-Revision-Date: 2024-10-09 14:55\n"
+
+msgid "%(amount)d more..."
+msgstr "%(amount)d más..."
 
 msgid "%(duration)s was added, account paid until %(expiry)s."
 msgstr "Tiempo añadido: %(duration)s. Cuenta pagada hasta el %(expiry)s."
@@ -96,8 +99,14 @@ msgstr "Conectar"
 msgid "Connected"
 msgstr "Conectado"
 
+msgid "CONNECTED"
+msgstr "CONECTADO"
+
 msgid "Connecting"
 msgstr "Conectando"
+
+msgid "CONNECTING..."
+msgstr "CONECTANDO..."
 
 #. Creating a secure connection that isn't breakable by quantum computers.
 msgid "CREATING QUANTUM SECURE CONNECTION"
@@ -108,6 +117,11 @@ msgstr "CREANDO CONEXIÓN SEGURA"
 
 msgid "Custom"
 msgstr "Personalizado"
+
+#. This refers to the Custom DNS setting in the VPN settings view. This is
+#. displayed when the feature is on.
+msgid "Custom DNS"
+msgstr "DNS personalizado"
 
 msgid "Default"
 msgstr "Predeterminado"
@@ -121,6 +135,9 @@ msgstr "Eliminar lista"
 msgid "Disable"
 msgstr "Desactivar"
 
+msgid "Disable anyway"
+msgstr "Deshabilitar de todos modos"
+
 msgid "Disconnect"
 msgstr "Desconectar"
 
@@ -130,11 +147,14 @@ msgstr "Desconectar y salir"
 msgid "Disconnected"
 msgstr "Desconectado"
 
+msgid "DISCONNECTED"
+msgstr "DESCONECTADO"
+
 msgid "Disconnecting"
 msgstr "Desconectando"
 
-msgid "Dismiss"
-msgstr "Descartar"
+msgid "DISCONNECTING..."
+msgstr "DESCONECTANDO..."
 
 msgid "Edit"
 msgstr "Editar"
@@ -176,6 +196,11 @@ msgstr "menos de un día"
 msgid "less than a day left"
 msgstr "queda menos de un día"
 
+#. This refers to the multihop setting in the VPN settings view. This is
+#. displayed when the feature is on.
+msgid "Multihop"
+msgstr "Salto múltiple"
+
 msgid "Name"
 msgstr "Nombre"
 
@@ -202,6 +227,11 @@ msgstr "Contraseña"
 
 msgid "Port"
 msgstr "Puerto"
+
+#. This refers to the quantum resistance setting in the WireGuard settings view.
+#. This is displayed when the feature is on.
+msgid "Quantum resistance"
+msgstr "Resistencia cuántica"
 
 #. The connection is secure and isn't breakable by quantum computers.
 msgid "QUANTUM SECURE CONNECTION"
@@ -340,11 +370,19 @@ msgctxt "accessibility"
 msgid "Select location. Current location is %(location)s"
 msgstr "Seleccione la ubicación. La ubicación actual es %(location)s"
 
+msgctxt "accessibility"
+msgid "Shadowsocks settings"
+msgstr "Ajustes de Shadowsocks"
+
 #. Provided to accessibility tools such as screenreaders to describe
 #. the button which unobscures the account number.
 msgctxt "accessibility"
 msgid "Show account number"
 msgstr "Mostrar número de cuenta"
+
+msgctxt "accessibility"
+msgid "UDP-over-TCP settings"
+msgstr "Ajustes de UDP sobre TCP"
 
 #. Title label in navigation bar
 msgctxt "account-view"
@@ -570,8 +608,16 @@ msgid "%(city)s (%(hostname)s)"
 msgstr "%(city)s (%(hostname)s)"
 
 msgctxt "connect-view"
+msgid "Active features"
+msgstr "Características activas"
+
+msgctxt "connect-view"
 msgid "Congrats!"
 msgstr "¡Enhorabuena!"
+
+msgctxt "connect-view"
+msgid "Connection details"
+msgstr "Detalles de la conexión"
 
 msgctxt "connect-view"
 msgid "Disconnect"
@@ -645,12 +691,6 @@ msgctxt "connect-view"
 msgid "You’re all set!"
 msgstr "¡Ya está!"
 
-#. %(hostname)s - The current server the app is connected to, e.g. "se-got-wg-001 using DAITA"
-#. %(daita)s - Will be replaced with "DAITA"
-msgctxt "connection-info"
-msgid "%(hostname)s using %(daita)s"
-msgstr "%(hostname)s utilizando %(daita)s"
-
 #. The hostname line displayed below the country on the main screen
 #. Available placeholders:
 #. %(relay)s - the relay hostname
@@ -662,14 +702,6 @@ msgstr "%(relay)s a través de %(entry)s"
 msgctxt "connection-info"
 msgid "%(relay)s via Custom bridge"
 msgstr "%(relay)s a través de puente personalizado"
-
-#. The tunnel type line displayed below the hostname line on the main screen
-#. Available placeholders:
-#. %(tunnelType)s - the tunnel type, i.e OpenVPN
-#. %(bridgeType)s - the bridge type, i.e Shadowsocks
-msgctxt "connection-info"
-msgid "%(tunnelType)s via %(bridgeType)s"
-msgstr "%(tunnelType)s a través de %(bridgeType)s"
 
 msgctxt "connection-info"
 msgid "In"
@@ -1501,6 +1533,9 @@ msgctxt "settings-view"
 msgid "Support"
 msgstr "Ayuda"
 
+msgid "%s custom port"
+msgstr "Puerto personalizado de %s"
+
 msgctxt "settings-view"
 msgid "Update available. Install the latest app version to stay up to date."
 msgstr "Hay una actualización disponible. Instale la última versión de la aplicación."
@@ -1761,8 +1796,8 @@ msgid "Update your kernel."
 msgstr "Actualice su kernel."
 
 msgctxt "tunnel-control"
-msgid "Secure my connection"
-msgstr "Proteger mi conexión"
+msgid "Connect"
+msgstr "Conectar"
 
 msgctxt "tunnel-control"
 msgid "Switch location"
@@ -2025,6 +2060,16 @@ msgctxt "wireguard-settings-nav"
 msgid "%(wireguard)s settings"
 msgstr "Configuración de %(wireguard)s"
 
+#. Title label in navigation bar
+msgctxt "wireguard-settings-nav"
+msgid "Shadowsocks"
+msgstr "Shadowsocks"
+
+#. Title label in navigation bar
+msgctxt "wireguard-settings-nav"
+msgid "UDP-over-TCP"
+msgstr "UDP sobre TCP"
+
 msgctxt "wireguard-settings-view"
 msgid "%(daita)s (%(daitaFull)s) hides patterns in your encrypted VPN traffic. If anyone is monitoring your connection, this makes it significantly harder for them to identify what websites you are visiting. It does this by carefully adding network noise and making all network packets the same size."
 msgstr "%(daita)s (%(daitaFull)s) oculta los patrones en su tráfico VPN cifrado. Si alguien supervisa su conexión, esto les dificulta notablemente identificar qué sitios web está visitando. Lo realiza añadiendo con cuidado ruido de red y haciendo que todos los paquetes de red tengan el mismo tamaño."
@@ -2036,8 +2081,8 @@ msgid "%(wireguard)s settings"
 msgstr "Configuración de %(wireguard)s"
 
 msgctxt "wireguard-settings-view"
-msgid "Attention: Since this increases your total network traffic, be cautious if you have a limited data plan. It can also negatively impact your network speed. Please consider this if you want to enable %(daita)s."
-msgstr "Atención: Como esto aumenta su tráfico de red total, tenga cuidado si dispone de un plan de datos limitados. Además, puede afectar negativamente a su velocidad de red. Considere todo esto si quiere habilitar %(daita)s."
+msgid "Hides patterns in your encrypted VPN traffic. Since this increases your total network traffic, be cautious if you have a limited data plan. It can also negatively impact your network speed and battery usage."
+msgstr "Oculta patrones en su tráfico VPN cifrado. Como esto aumenta el tráfico total de su red, tenga cuidado si dispone de un plan de datos limitado. También puede afectar negativamente a la velocidad de su red y al uso de la batería."
 
 msgctxt "wireguard-settings-view"
 msgid "IP version"
@@ -2060,12 +2105,15 @@ msgid "Obfuscation hides the WireGuard traffic inside another protocol. It can b
 msgstr "La ofuscación oculta el tráfico de WireGuard dentro de otro protocolo. Puede usarse para sortear la censura y otros tipos de filtrado donde podría bloquearse una conexión de WireGuard normal."
 
 msgctxt "wireguard-settings-view"
-msgid "On (UDP-over-TCP)"
-msgstr "Activado (UDP sobre TCP)"
-
-msgctxt "wireguard-settings-view"
 msgid "Port"
 msgstr "Puerto"
+
+#. Text showing currently selected port.
+#. Available placeholders:
+#. %(port)s - Can be either a number between 1 and 65000 or the text "Automatic".
+msgctxt "wireguard-settings-view"
+msgid "Port: %(port)s"
+msgstr "Puerto: %(port)s"
 
 #. The title for the WireGuard quantum resistance selector. This setting
 #. makes the cryptography resistant to the future abilities of quantum
@@ -2084,6 +2132,10 @@ msgid "Set %(wireguard)s MTU value. Valid range: %(min)d - %(max)d."
 msgstr "Establezca el valor de MTU de %(wireguard)s. Intervalo válido: %(min)d-%(max)d."
 
 msgctxt "wireguard-settings-view"
+msgid "Shadowsocks"
+msgstr "Shadowsocks"
+
+msgctxt "wireguard-settings-view"
 msgid "The automatic setting will randomly choose from the valid port ranges shown below."
 msgstr "El ajuste automático se elegirá al azar entre los rangos de puertos válidos que se muestran a continuación."
 
@@ -2098,18 +2150,22 @@ msgctxt "wireguard-settings-view"
 msgid "This allows access to %(wireguard)s for devices that only support IPv6."
 msgstr "Esto permite acceder a %(wireguard)s desde dispositivos que solo sean compatibles con IPv6."
 
-#. Warning text in a dialog that is displayed after a setting is toggled.
-msgctxt "wireguard-settings-view"
-msgid "This feature isn't available on all servers. You might need to change location after enabling."
-msgstr "Esta característica no está disponible en todos los servidores. Podría tener que cambiar de ubicación tras habilitarla."
-
 msgctxt "wireguard-settings-view"
 msgid "This feature makes the WireGuard tunnel resistant to potential attacks from quantum computers."
 msgstr "Esta característica permite que el túnel de WireGuard resista posibles ataques de ordenadores cuánticos."
 
 msgctxt "wireguard-settings-view"
+msgid "UDP-over-TCP"
+msgstr "UDP sobre TCP"
+
+msgctxt "wireguard-settings-view"
 msgid "UDP-over-TCP port"
 msgstr "Puerto de UDP sobre TCP"
+
+#. Text describing the valid port range for a port selector.
+msgctxt "wireguard-settings-view"
+msgid "Valid range: %(min)s - %(max)s"
+msgstr "Rango válido: %(min)s - %(max)s"
 
 msgctxt "wireguard-settings-view"
 msgid "Which TCP port the UDP-over-TCP obfuscation protocol should connect to on the VPN server."
@@ -2118,11 +2174,18 @@ msgstr "El puerto TCP al que se conectará el protocolo de ofuscación de UDP so
 msgid "%s (added)"
 msgstr "%s (añadido)"
 
+msgctxt "String explaining where the user is connected and whether the connection is \"using\" a specific feature. So the first placeholder is a location and the second is a named feature. Example: \"gb-lon-wg-304 using DAITA\" (where \"gb-lon-wg-304\" is the location and \"DAITA\" is the named feature)"
+msgid "%s using %s"
+msgstr "%s utilizando %s"
+
 msgid "%s was added to \"%s\""
 msgstr "%s se ha añadido a «%s»"
 
 msgid "%s was added to your account."
 msgstr "%s se ha añadido a su cuenta."
+
+msgid "%s was removed from \"%s\""
+msgstr "%s se ha eliminado de «%s»"
 
 msgid "1. After clicking on the <b>Go to VPN settings</b> button below, click on the cogwheel next to the <b>Mullvad VPN</b> name."
 msgstr "1. Tras hacer clic en el botón <b>Ir a la configuración de VPN</b> de abajo, haga clic en el icono de engranaje situado junto al nombre de la <b>Mullvad VPN</b>."
@@ -2190,8 +2253,11 @@ msgstr "La VPN siempre activa podría estar habilitada en otra aplicación"
 msgid "At least one method needs to be enabled"
 msgstr "Se debe habilitar al menos un método"
 
-msgid "Attention: Split tunneling is a privacy risk."
-msgstr "Atención: La utilización dividida es un riesgo para la privacidad."
+msgid "Attention: If \"Block connections without VPN\" is enabled, split apps will not have Internet. Always keep in mind that split tunneling is a privacy risk."
+msgstr "Atención: Si la opción «Bloquear conexiones sin VPN» está activada, las aplicaciones divididas no tendrán Internet. Tenga siempre en cuenta que «Split tunneling» supone un riesgo para la privacidad."
+
+msgid "Attention: Since this increases your total network traffic, be cautious if you have a limited data plan. It can also negatively impact your network speed and battery usage."
+msgstr "Atención: Como esto aumenta el tráfico total de su red, tenga cuidado si tiene un plan de datos limitado. También puede afectar negativamente a la velocidad de su red y al uso de la batería."
 
 msgid "Attention: this setting cannot be used in combination with <b>Use custom DNS server</b>."
 msgstr "Atención: este ajuste no se puede utilizar en combinación con <b>Usar servidor DNS personalizado</b>."
@@ -2199,16 +2265,12 @@ msgstr "Atención: este ajuste no se puede utilizar en combinación con <b>Usar 
 msgid "Auto-connect & Lockdown mode"
 msgstr "Conexión automática y modo de bloqueo"
 
-msgid "Auto-connect & \\nLockdown mode"
-msgstr "Conexión automática y \\nmodo de bloqueo"
-
 msgid "Auto-connect (legacy)"
 msgstr "Conexión automática (heredada)"
 
 msgid "Auto-connect is called Always-on VPN in the Android system settings and it makes sure you are constantly connected to the VPN tunnel and auto connects after restart."
 msgstr "La conexión automática se llama VPN siempre activa en la configuración del sistema Android y asegura estar conectado constantemente al túnel de la VPN y conectarse automáticamente después de cada reinicio."
 
-msgctxt "Description of the existing \"auto-connect\" functionality as well as a notification about it being removed/replaced in a future update."
 msgid "Automatically connect when the app launches. This setting will be replaced with a new connect on device start-up feature in a future update."
 msgstr "Conectar automáticamente cuando se inicie la aplicación. Este ajuste se reemplazará por una conexión nueva en la función de inicio de dispositivo en una futura actualización."
 
@@ -2239,7 +2301,6 @@ msgstr "Crear nueva lista"
 msgid "Critical error (your attention is required)"
 msgstr "Error crítico (precisa su atención)"
 
-msgctxt "Status information about which method/configuration is actively being used. The placeholder is replaced by a built-in or custom method. For example \"Current: Direct\" or \"Current: MyCustomMethod\". Note that it's not \"current\" as in \"present time\"."
 msgid "Current: %s"
 msgstr "Actual: %s"
 
@@ -2266,6 +2327,9 @@ msgstr "Descartar"
 
 msgid "Discard changes?"
 msgstr "¿Descartar los cambios?"
+
+msgid "Dismiss"
+msgstr "Descartar"
 
 msgid "Edit custom lists"
 msgstr "Editar listas personalizadas"
@@ -2327,11 +2391,11 @@ msgstr "Importación realizada correctamente. Anulaciones activas"
 msgid "Importing new overrides might replace some previously imported overrides."
 msgstr "Importar nuevas anulaciones podría reemplazar algunas anulaciones anteriormente importadas."
 
-msgid "Install Mullvad VPN (%s) to stay up to date"
-msgstr "Instale Mullvad VPN (%s) para seguir actualizado"
-
 msgid "Invalid or missing value \"%s\""
 msgstr "El valor «%s» falta o no es válido"
+
+msgid "It looks like you’ve entered an account number instead of a voucher code. If you would like to change the active account, please log out first."
+msgstr "Parece que ha introducido un número de cuenta en lugar de un código de cupón. Si desea cambiar la cuenta activa, cierre primero la sesión."
 
 msgid "Lets you select apps that should access the Internet directly without going through the VPN tunnel."
 msgstr "Le permite seleccionar aplicaciones que deberían acceder a Internet directamente sin pasar por el túnel VPN."
@@ -2375,6 +2439,9 @@ msgstr "No se ha encontrado ninguna ubicación"
 msgid "Not found"
 msgstr "No encontrado"
 
+msgid "On (UDP-over-TCP)"
+msgstr "Activado (UDP sobre TCP)"
+
 msgid "Overrides active"
 msgstr "Anulaciones activas"
 
@@ -2417,8 +2484,8 @@ msgstr "Límite de recursión"
 msgid "Remove"
 msgstr "Quitar"
 
-msgid "Remove %s from list"
-msgstr "Quitar %s de la lista"
+msgid "Remove %s from %s"
+msgstr "Quitar %s de %s"
 
 msgid "Remove custom port"
 msgstr "Quitar puerto personalizado"
@@ -2435,8 +2502,11 @@ msgstr "Restablecer anulaciones"
 msgid "Reset to default"
 msgstr "Restablecer a valores predeterminados"
 
+msgid "Secure my connection"
+msgstr "Proteger mi conexión"
+
 msgid "Secured"
-msgstr "Protegido"
+msgstr "Protegida"
 
 msgid "Set WireGuard MTU value. Valid range: %d - %d."
 msgstr "Establezca el valor de MTU de WireGuard. Intervalo válido: %d-%d."
@@ -2483,6 +2553,9 @@ msgstr "No hay configuración de VPN en su dispositivo"
 msgid "This address has already been entered."
 msgstr "Esta dirección ya se ha introducido."
 
+msgid "This feature isn’t available on all servers. You might need to change location after enabling."
+msgstr "Esta característica no está disponible en todos los servidores. Podría tener que cambiar de ubicación tras habilitarla."
+
 msgid "This field is required"
 msgstr "Este campo es obligatorio"
 
@@ -2517,11 +2590,10 @@ msgid "Unknown or prohibited key \"%s\""
 msgstr "Clave «%s» desconocida o prohibida"
 
 msgid "Unsecured"
-msgstr "No protegido"
+msgstr "No protegida"
 
-msgctxt "Notification message shown when the app lacks a permission called \"VPN permission\"."
 msgid "Unsecured (No VPN permission)"
-msgstr "Desprotegido (sin permiso de VPN)"
+msgstr "No protegida (sin permiso de VPN)"
 
 msgid "Update DNS server"
 msgstr "Actualizar servidor DNS"
@@ -2580,9 +2652,6 @@ msgstr "Mientras esté conectado, su ubicación real permanecerá oculta con una
 msgid "WireGuard MTU"
 msgstr "MTU de WireGuard"
 
-msgid "WireGuard custom port"
-msgstr "Puerto personalizado de WireGuard"
-
 msgid "WireGuard obfuscation"
 msgstr "Ofuscación de WireGuard"
 
@@ -2595,10 +2664,12 @@ msgstr "PUEDE QUE SE ESTÉ FILTRANDO EL TRÁFICO DE RED"
 msgid "You are running an unsupported app version."
 msgstr "Ejecuta una versión de la aplicación que no es compatible."
 
+msgid "\"%s\" was created"
+msgstr "Se ha creado «%s»"
+
 msgid "\"%s\" was deleted"
 msgstr "Se ha eliminado «%s»"
 
-msgctxt "Clickable link that leads to our website."
 msgid "here"
 msgstr "aquí"
 
