--- a/gui/locales/nb/messages.po
+++ b/gui/locales/nb/messages.po
@@ -10,7 +10,10 @@ msgstr ""
 "Project-Id-Version: mullvad-app\n"
 "Language-Team: Norwegian Bokmal\n"
 "Language: nb_NO\n"
-"PO-Revision-Date: 2024-06-27 08:16\n"
+"PO-Revision-Date: 2024-10-09 14:55\n"
+
+msgid "%(amount)d more..."
+msgstr "%(amount)d til …"
 
 msgid "%(duration)s was added, account paid until %(expiry)s."
 msgstr "%(duration)s ble lagt til, konto betalt til %(expiry)s."
@@ -96,8 +99,14 @@ msgstr "Koble til"
 msgid "Connected"
 msgstr "Tilkoblet"
 
+msgid "CONNECTED"
+msgstr "TILKOBLET"
+
 msgid "Connecting"
 msgstr "Kobler til"
+
+msgid "CONNECTING..."
+msgstr "KOBLER TIL …"
 
 #. Creating a secure connection that isn't breakable by quantum computers.
 msgid "CREATING QUANTUM SECURE CONNECTION"
@@ -108,6 +117,11 @@ msgstr "OPPRETTER SIKKER TILKOBLING"
 
 msgid "Custom"
 msgstr "Egendefinert"
+
+#. This refers to the Custom DNS setting in the VPN settings view. This is
+#. displayed when the feature is on.
+msgid "Custom DNS"
+msgstr "Tilpasset DNS"
 
 msgid "Default"
 msgstr "Standard"
@@ -121,6 +135,9 @@ msgstr "Slett liste"
 msgid "Disable"
 msgstr "Deaktiver"
 
+msgid "Disable anyway"
+msgstr "Deaktiver uansett"
+
 msgid "Disconnect"
 msgstr "Koble fra"
 
@@ -130,11 +147,14 @@ msgstr "Koble fra og avslutt"
 msgid "Disconnected"
 msgstr "Frakoblet"
 
+msgid "DISCONNECTED"
+msgstr "DEAKTIVERT"
+
 msgid "Disconnecting"
 msgstr "Kobler fra"
 
-msgid "Dismiss"
-msgstr "Ignorer"
+msgid "DISCONNECTING..."
+msgstr "DEAKTIVERER …"
 
 msgid "Edit"
 msgstr "Endre"
@@ -176,6 +196,11 @@ msgstr "mindre enn én dag"
 msgid "less than a day left"
 msgstr "mindre enn én dag igjen"
 
+#. This refers to the multihop setting in the VPN settings view. This is
+#. displayed when the feature is on.
+msgid "Multihop"
+msgstr "Multihopp"
+
 msgid "Name"
 msgstr "Navn"
 
@@ -202,6 +227,11 @@ msgstr "Passord"
 
 msgid "Port"
 msgstr "Port"
+
+#. This refers to the quantum resistance setting in the WireGuard settings view.
+#. This is displayed when the feature is on.
+msgid "Quantum resistance"
+msgstr "Kvantemotstand"
 
 #. The connection is secure and isn't breakable by quantum computers.
 msgid "QUANTUM SECURE CONNECTION"
@@ -340,11 +370,19 @@ msgctxt "accessibility"
 msgid "Select location. Current location is %(location)s"
 msgstr "Velg plassering. Gjeldende plassering er %(location)s"
 
+msgctxt "accessibility"
+msgid "Shadowsocks settings"
+msgstr "Shadowsocks-innstillinger"
+
 #. Provided to accessibility tools such as screenreaders to describe
 #. the button which unobscures the account number.
 msgctxt "accessibility"
 msgid "Show account number"
 msgstr "Vis kontonummer"
+
+msgctxt "accessibility"
+msgid "UDP-over-TCP settings"
+msgstr "UDP-over-TCP-innstillinger"
 
 #. Title label in navigation bar
 msgctxt "account-view"
@@ -570,8 +608,16 @@ msgid "%(city)s (%(hostname)s)"
 msgstr "%(city)s (%(hostname)s)"
 
 msgctxt "connect-view"
+msgid "Active features"
+msgstr "Aktive funksjoner"
+
+msgctxt "connect-view"
 msgid "Congrats!"
 msgstr "Gratulerer!"
+
+msgctxt "connect-view"
+msgid "Connection details"
+msgstr "Tilkoblingsdetaljer"
 
 msgctxt "connect-view"
 msgid "Disconnect"
@@ -645,12 +691,6 @@ msgctxt "connect-view"
 msgid "You’re all set!"
 msgstr "Du er klar!"
 
-#. %(hostname)s - The current server the app is connected to, e.g. "se-got-wg-001 using DAITA"
-#. %(daita)s - Will be replaced with "DAITA"
-msgctxt "connection-info"
-msgid "%(hostname)s using %(daita)s"
-msgstr "%(hostname)s bruker %(daita)s"
-
 #. The hostname line displayed below the country on the main screen
 #. Available placeholders:
 #. %(relay)s - the relay hostname
@@ -662,14 +702,6 @@ msgstr "%(relay)s via %(entry)s"
 msgctxt "connection-info"
 msgid "%(relay)s via Custom bridge"
 msgstr "%(relay)s via egendefinert bro"
-
-#. The tunnel type line displayed below the hostname line on the main screen
-#. Available placeholders:
-#. %(tunnelType)s - the tunnel type, i.e OpenVPN
-#. %(bridgeType)s - the bridge type, i.e Shadowsocks
-msgctxt "connection-info"
-msgid "%(tunnelType)s via %(bridgeType)s"
-msgstr "%(tunnelType)s via %(bridgeType)s"
 
 msgctxt "connection-info"
 msgid "In"
@@ -1501,6 +1533,9 @@ msgctxt "settings-view"
 msgid "Support"
 msgstr "Kundestøtte"
 
+msgid "%s custom port"
+msgstr "%s tilpasset port"
+
 msgctxt "settings-view"
 msgid "Update available. Install the latest app version to stay up to date."
 msgstr "Oppdatering tilgjengelig. Installer den siste appversjonen for å holde deg oppdatert."
@@ -1761,8 +1796,8 @@ msgid "Update your kernel."
 msgstr "Oppdater kjernen."
 
 msgctxt "tunnel-control"
-msgid "Secure my connection"
-msgstr "Gjør tilkoblingen sikker"
+msgid "Connect"
+msgstr "Koble til"
 
 msgctxt "tunnel-control"
 msgid "Switch location"
@@ -2025,6 +2060,16 @@ msgctxt "wireguard-settings-nav"
 msgid "%(wireguard)s settings"
 msgstr "%(wireguard)s-innstillinger"
 
+#. Title label in navigation bar
+msgctxt "wireguard-settings-nav"
+msgid "Shadowsocks"
+msgstr "Shadowsocks"
+
+#. Title label in navigation bar
+msgctxt "wireguard-settings-nav"
+msgid "UDP-over-TCP"
+msgstr "UDP-over-TCP"
+
 msgctxt "wireguard-settings-view"
 msgid "%(daita)s (%(daitaFull)s) hides patterns in your encrypted VPN traffic. If anyone is monitoring your connection, this makes it significantly harder for them to identify what websites you are visiting. It does this by carefully adding network noise and making all network packets the same size."
 msgstr "%(daita)s (%(daitaFull)s) skjuler mønstre i den krypterte VPN-trafikken. Hvis noen overvåker tilkoblingen din, gjør dette det betydelig vanskeligere for dem å identifisere hvilke nettsteder du besøker. Dette gjøres ved varsomt å legge til nettverksstøy og gjøre alle nettverkspakker like store."
@@ -2036,8 +2081,8 @@ msgid "%(wireguard)s settings"
 msgstr "%(wireguard)s-innstillinger"
 
 msgctxt "wireguard-settings-view"
-msgid "Attention: Since this increases your total network traffic, be cautious if you have a limited data plan. It can also negatively impact your network speed. Please consider this if you want to enable %(daita)s."
-msgstr "Obs: Siden dette øker den totale nettverkstrafikken, bør du være forsiktig hvis du har et abonnement med begrenset data. Det kan også påvirke nettverkshastigheten i negativ retning. Vær oppmerksom på dette hvis du ønsker å aktivere %(daita)s."
+msgid "Hides patterns in your encrypted VPN traffic. Since this increases your total network traffic, be cautious if you have a limited data plan. It can also negatively impact your network speed and battery usage."
+msgstr "Skjuler mønstre i den krypterte VPN-trafikken din. Siden dette øker den totale nettverkstrafikken, bør du være forsiktig hvis du har et abonnement med begrenset data. Det kan også negativt påvirke nettverkshastigheten og batteribruken."
 
 msgctxt "wireguard-settings-view"
 msgid "IP version"
@@ -2060,12 +2105,15 @@ msgid "Obfuscation hides the WireGuard traffic inside another protocol. It can b
 msgstr "Tilsløring skjuler WireGuard-trafikken i en annen protokoll. Man kan på den måten omgå sensur og andre typer filter i tilfeller der en vanlig WireGuard-tilkobling ville blitt blokkert."
 
 msgctxt "wireguard-settings-view"
-msgid "On (UDP-over-TCP)"
-msgstr "På (UDP-over-TCP)"
-
-msgctxt "wireguard-settings-view"
 msgid "Port"
 msgstr "Port"
+
+#. Text showing currently selected port.
+#. Available placeholders:
+#. %(port)s - Can be either a number between 1 and 65000 or the text "Automatic".
+msgctxt "wireguard-settings-view"
+msgid "Port: %(port)s"
+msgstr "Port: %(port)s"
 
 #. The title for the WireGuard quantum resistance selector. This setting
 #. makes the cryptography resistant to the future abilities of quantum
@@ -2084,6 +2132,10 @@ msgid "Set %(wireguard)s MTU value. Valid range: %(min)d - %(max)d."
 msgstr "Angi %(wireguard)s MTU-verdi. Gyldig område: %(min)d-%(max)d."
 
 msgctxt "wireguard-settings-view"
+msgid "Shadowsocks"
+msgstr "Shadowsocks"
+
+msgctxt "wireguard-settings-view"
 msgid "The automatic setting will randomly choose from the valid port ranges shown below."
 msgstr "Den automatiske innstillingen vil tilfeldig velge fra utvalget av gyldige porter vist under."
 
@@ -2098,18 +2150,22 @@ msgctxt "wireguard-settings-view"
 msgid "This allows access to %(wireguard)s for devices that only support IPv6."
 msgstr "Dette gir tilgang til %(wireguard)s for enheter som støtter IPv6."
 
-#. Warning text in a dialog that is displayed after a setting is toggled.
-msgctxt "wireguard-settings-view"
-msgid "This feature isn't available on all servers. You might need to change location after enabling."
-msgstr "Denne funksjonen er ikke tilgjengelig på alle servere. Det kan hende du må endre plassering etter aktivering."
-
 msgctxt "wireguard-settings-view"
 msgid "This feature makes the WireGuard tunnel resistant to potential attacks from quantum computers."
 msgstr "Denne funksjonen gjør WireGuard-tunnelen motstandsdyktig mot potensielle angrep fra kvantemaskiner."
 
 msgctxt "wireguard-settings-view"
+msgid "UDP-over-TCP"
+msgstr "UDP-over-TCP"
+
+msgctxt "wireguard-settings-view"
 msgid "UDP-over-TCP port"
 msgstr "UDP-over-TCP-port"
+
+#. Text describing the valid port range for a port selector.
+msgctxt "wireguard-settings-view"
+msgid "Valid range: %(min)s - %(max)s"
+msgstr "Gyldig område: %(min)s–%(max)s"
 
 msgctxt "wireguard-settings-view"
 msgid "Which TCP port the UDP-over-TCP obfuscation protocol should connect to on the VPN server."
@@ -2118,20 +2174,27 @@ msgstr "TCP-porten som UDP-over-TCP-tilsløringen skal koble til på VPN-servere
 msgid "%s (added)"
 msgstr "%s (lagt til)"
 
+msgctxt "String explaining where the user is connected and whether the connection is \"using\" a specific feature. So the first placeholder is a location and the second is a named feature. Example: \"gb-lon-wg-304 using DAITA\" (where \"gb-lon-wg-304\" is the location and \"DAITA\" is the named feature)"
+msgid "%s using %s"
+msgstr "%s bruker %s"
+
 msgid "%s was added to \"%s\""
 msgstr "%s ble lagt til «%s»"
 
 msgid "%s was added to your account."
 msgstr "%s ble lagt til kontoen din."
 
+msgid "%s was removed from \"%s\""
+msgstr "%s ble fjernet fra «%s»"
+
 msgid "1. After clicking on the <b>Go to VPN settings</b> button below, click on the cogwheel next to the <b>Mullvad VPN</b> name."
-msgstr "1. Etter at du har trykket på <b>Gå til VPN-innstillinger</b> nedenfor, trykker du på tannhjulet ved siden av navnet <b>Mullvad VPN</b>."
+msgstr "1. Etter at du har klikket på <b>Gå til VPN-innstillinger</b>-knappen nedenfor, trykker du på tannhjulet ved siden av navnet <b>Mullvad VPN</b>."
 
 msgid "2. To enable Auto-connect, click on the toggle next to <b>Always-on VPN</b>."
-msgstr "2. For å aktivere Automatisk tilkobling trykker du på bryteren ved siden av <b>VPN alltid på</b>."
+msgstr "2. For å aktivere «Automatisk tilkobling», klikker du på bryteren ved siden av <b>VPN alltid på</b>."
 
 msgid "3. To enable Lockdown mode, click on the toggle next to <b>Block connections without VPN</b>.<br /><br /><b>Warning: This setting blocks split apps and the Local Network Sharing feature.</b>"
-msgstr "3. Klikk på bryteren ved siden av <b>Blokker tilkoblinger uten VPN</b> for å aktivere låsemodusen.<br /><br /><b>Advarsel: Denne innstillingen blokkerer delte apper og funksjonen Deling over lokalt nettverk.</b>"
+msgstr "3. Klikk på bryteren ved siden av <b>Blokker tilkoblinger uten VPN</b> for å aktivere låsemodusen.<br /><br /><b>Advarsel: Denne innstillingen blokkerer delte apper og funksjonen «Deling over lokalt nettverk».</b>"
 
 msgid "30 days was added to your account."
 msgstr "30 dager ble lagt til kontoen din."
@@ -2190,17 +2253,17 @@ msgstr "VPN som alltid er på, kan være aktivert for en annen app"
 msgid "At least one method needs to be enabled"
 msgstr "Minst én metode må være aktivert"
 
-msgid "Attention: Split tunneling is a privacy risk."
-msgstr "OBS: Delt tunnelering utgjør en risiko mot personvernet."
+msgid "Attention: If \"Block connections without VPN\" is enabled, split apps will not have Internet. Always keep in mind that split tunneling is a privacy risk."
+msgstr "Merk: Hvis «Blokker tilkoblinger uten VPN» er aktivert, har ikke splittede apper internettilgang. Ha i bakhodet at «split tunneling» er en personvernrisiko."
+
+msgid "Attention: Since this increases your total network traffic, be cautious if you have a limited data plan. It can also negatively impact your network speed and battery usage."
+msgstr "Merk: Siden dette øker den totale nettverkstrafikken, bør du være forsiktig hvis du har et abonnement med begrenset data. Det kan også negativt påvirke nettverkshastigheten og batteribruken."
 
 msgid "Attention: this setting cannot be used in combination with <b>Use custom DNS server</b>."
-msgstr "OBS: Denne innstillingen kan ikke brukes sammen med <b>Bruk egendefinert DNS-server</b>."
+msgstr "Merk: Denne innstillingen kan ikke brukes sammen med <b>Bruk egendefinert DNS-server</b>."
 
 msgid "Auto-connect & Lockdown mode"
 msgstr "Automatisk tilkobling og låsemodus"
-
-msgid "Auto-connect & \\nLockdown mode"
-msgstr "Automatisk tilkobling og \\nlåsemodus"
 
 msgid "Auto-connect (legacy)"
 msgstr "Automatisk tilkobling (eldre)"
@@ -2208,7 +2271,6 @@ msgstr "Automatisk tilkobling (eldre)"
 msgid "Auto-connect is called Always-on VPN in the Android system settings and it makes sure you are constantly connected to the VPN tunnel and auto connects after restart."
 msgstr "Automatisk tilkobling heter «Alltid-på-VPN» i Androids systeminnstillinger og sørger for at du alltid er tilkoblet VPN-tunnelen og automatisk tilkobling etter omstart."
 
-msgctxt "Description of the existing \"auto-connect\" functionality as well as a notification about it being removed/replaced in a future update."
 msgid "Automatically connect when the app launches. This setting will be replaced with a new connect on device start-up feature in a future update."
 msgstr "Koble til automatisk når appen startes. Denne innstillingen vil i en fremtidig oppdatering bli erstattet med en ny funksjon for tilkobling ved oppstart av enheten."
 
@@ -2239,7 +2301,6 @@ msgstr "Opprett ny liste"
 msgid "Critical error (your attention is required)"
 msgstr "Kritisk feil (krever din oppmerksomhet)"
 
-msgctxt "Status information about which method/configuration is actively being used. The placeholder is replaced by a built-in or custom method. For example \"Current: Direct\" or \"Current: MyCustomMethod\". Note that it's not \"current\" as in \"present time\"."
 msgid "Current: %s"
 msgstr "Gjeldende: %s"
 
@@ -2266,6 +2327,9 @@ msgstr "Forkast"
 
 msgid "Discard changes?"
 msgstr "Forkaste endringer?"
+
+msgid "Dismiss"
+msgstr "Ignorer"
 
 msgid "Edit custom lists"
 msgstr "Endre egendefinerte lister"
@@ -2327,11 +2391,11 @@ msgstr "Importering vellykket. Overstyringer aktive"
 msgid "Importing new overrides might replace some previously imported overrides."
 msgstr "Importering av nye overstyringer kan erstatte tidligere importerte overstyringer."
 
-msgid "Install Mullvad VPN (%s) to stay up to date"
-msgstr "Installer Mullvad VPN (%s) for å holde deg oppdatert"
-
 msgid "Invalid or missing value \"%s\""
 msgstr "Ugyldig eller mangler verdien «%s»"
+
+msgid "It looks like you’ve entered an account number instead of a voucher code. If you would like to change the active account, please log out first."
+msgstr "Det ser ut til at du har oppgitt et kontonummer i stedet for en kupongkode. Hvis du vil endre den aktive kontoen, må du først logge ut."
 
 msgid "Lets you select apps that should access the Internet directly without going through the VPN tunnel."
 msgstr "Lar deg velge apper som skal få tilgang til internett direkte uten å gå gjennom VPN-tunnelen."
@@ -2375,6 +2439,9 @@ msgstr "Ingen plasseringer funnet"
 msgid "Not found"
 msgstr "Ikke funnet"
 
+msgid "On (UDP-over-TCP)"
+msgstr "På (UDP-over-TCP)"
+
 msgid "Overrides active"
 msgstr "Overstyringer aktive"
 
@@ -2400,7 +2467,7 @@ msgid "Please enter a valid remote server port"
 msgstr "Skriv inn en gyldig ekstern server-port"
 
 msgid "Please use the <b>Always-on</b> system setting instead by following the guide in <b>%s</b> above."
-msgstr "Bruk systeminnstillingen <b>alltid på</b> i stedet for å følge veiledningen i <b>%s</b> ovenfor."
+msgstr "Bruk systeminnstillingen <b>Alltid på</b> i stedet for å følge veiledningen i <b>%s</b> ovenfor."
 
 msgid "Preferences"
 msgstr "Preferanser"
@@ -2417,8 +2484,8 @@ msgstr "Rekursjonsgrense"
 msgid "Remove"
 msgstr "Fjern"
 
-msgid "Remove %s from list"
-msgstr "Fjern %s fra listen"
+msgid "Remove %s from %s"
+msgstr "Fjern %s fra %s"
 
 msgid "Remove custom port"
 msgstr "Fjern tilpasset port"
@@ -2434,6 +2501,9 @@ msgstr "Tilbakestill overstyringer"
 
 msgid "Reset to default"
 msgstr "Tilbakestill til standard"
+
+msgid "Secure my connection"
+msgstr "Gjør tilkoblingen sikker"
 
 msgid "Secured"
 msgstr "Sikret"
@@ -2483,6 +2553,9 @@ msgstr "Det er ingen VPN-innstillinger på enheten din"
 msgid "This address has already been entered."
 msgstr "Denne adressen er allerede skrevet inn."
 
+msgid "This feature isn’t available on all servers. You might need to change location after enabling."
+msgstr "Denne funksjonen er ikke tilgjengelig på alle servere. Det kan hende du må endre plassering etter aktivering."
+
 msgid "This field is required"
 msgstr "Feltet er påkrevd"
 
@@ -2519,7 +2592,6 @@ msgstr "Ukjent eller forbudt nøkkel «%s»"
 msgid "Unsecured"
 msgstr "Usikret"
 
-msgctxt "Notification message shown when the app lacks a permission called \"VPN permission\"."
 msgid "Unsecured (No VPN permission)"
 msgstr "Usikret (ingen VPN-tillatelse)"
 
@@ -2580,9 +2652,6 @@ msgstr "Mens du er tilkoblet vil din egentlige plassering være skjult med en pr
 msgid "WireGuard MTU"
 msgstr "WireGuard MTU"
 
-msgid "WireGuard custom port"
-msgstr "Tilpasset WireGuard-port"
-
 msgid "WireGuard obfuscation"
 msgstr "Tilsløring av WireGuard"
 
@@ -2595,10 +2664,12 @@ msgstr "DET KAN VÆRE EN NETTVERKSLEKKASJE HOS DEG"
 msgid "You are running an unsupported app version."
 msgstr "Du kjører en appversjon som ikke støttes."
 
+msgid "\"%s\" was created"
+msgstr "«%s» ble opprettet"
+
 msgid "\"%s\" was deleted"
 msgstr "«%s» ble slettet"
 
-msgctxt "Clickable link that leads to our website."
 msgid "here"
 msgstr "her"
 
