--- a/gui/locales/nl/messages.po
+++ b/gui/locales/nl/messages.po
@@ -10,7 +10,10 @@ msgstr ""
 "Project-Id-Version: mullvad-app\n"
 "Language-Team: Dutch\n"
 "Language: nl_NL\n"
-"PO-Revision-Date: 2024-06-27 08:16\n"
+"PO-Revision-Date: 2024-10-09 14:55\n"
+
+msgid "%(amount)d more..."
+msgstr "Nog %(amount)d..."
 
 msgid "%(duration)s was added, account paid until %(expiry)s."
 msgstr "%(duration)s is toegevoegd, account betaald tot %(expiry)s."
@@ -96,8 +99,14 @@ msgstr "Verbinden"
 msgid "Connected"
 msgstr "Verbonden"
 
+msgid "CONNECTED"
+msgstr "VERBONDEN"
+
 msgid "Connecting"
 msgstr "Bezig met verbinden"
+
+msgid "CONNECTING..."
+msgstr "VERBINDEN..."
 
 #. Creating a secure connection that isn't breakable by quantum computers.
 msgid "CREATING QUANTUM SECURE CONNECTION"
@@ -108,6 +117,11 @@ msgstr "BEVEILIGDE VERBINDING AANMAKEN"
 
 msgid "Custom"
 msgstr "Aangepast"
+
+#. This refers to the Custom DNS setting in the VPN settings view. This is
+#. displayed when the feature is on.
+msgid "Custom DNS"
+msgstr "Aangepaste DNS"
 
 msgid "Default"
 msgstr "Standaard"
@@ -121,6 +135,9 @@ msgstr "Lijst verwijderen"
 msgid "Disable"
 msgstr "Uitschakelen"
 
+msgid "Disable anyway"
+msgstr "Toch uitschakelen"
+
 msgid "Disconnect"
 msgstr "Verbinding verbreken"
 
@@ -130,11 +147,14 @@ msgstr "Verbinding verbreken en afsluiten"
 msgid "Disconnected"
 msgstr "Verbinding verbroken"
 
+msgid "DISCONNECTED"
+msgstr "VERBINDING VERBROKEN"
+
 msgid "Disconnecting"
 msgstr "Verbinding wordt verbroken"
 
-msgid "Dismiss"
-msgstr "Negeren"
+msgid "DISCONNECTING..."
+msgstr "VERBINDING VERBREKEN..."
 
 msgid "Edit"
 msgstr "Bewerken"
@@ -176,6 +196,11 @@ msgstr "minder dan een dag"
 msgid "less than a day left"
 msgstr "minder dan een dag over"
 
+#. This refers to the multihop setting in the VPN settings view. This is
+#. displayed when the feature is on.
+msgid "Multihop"
+msgstr "Multihop"
+
 msgid "Name"
 msgstr "Naam"
 
@@ -202,6 +227,11 @@ msgstr "Wachtwoord"
 
 msgid "Port"
 msgstr "Poort"
+
+#. This refers to the quantum resistance setting in the WireGuard settings view.
+#. This is displayed when the feature is on.
+msgid "Quantum resistance"
+msgstr "Kwantumbestendigheid"
 
 #. The connection is secure and isn't breakable by quantum computers.
 msgid "QUANTUM SECURE CONNECTION"
@@ -340,11 +370,19 @@ msgctxt "accessibility"
 msgid "Select location. Current location is %(location)s"
 msgstr "Selecteer locatie. Huidige locatie is %(location)s"
 
+msgctxt "accessibility"
+msgid "Shadowsocks settings"
+msgstr "Shadowsocks-instellingen"
+
 #. Provided to accessibility tools such as screenreaders to describe
 #. the button which unobscures the account number.
 msgctxt "accessibility"
 msgid "Show account number"
 msgstr "Accountnummer weergeven"
+
+msgctxt "accessibility"
+msgid "UDP-over-TCP settings"
+msgstr "UDP-over-TCP-instellingen"
 
 #. Title label in navigation bar
 msgctxt "account-view"
@@ -570,8 +608,16 @@ msgid "%(city)s (%(hostname)s)"
 msgstr "%(city)s (%(hostname)s)"
 
 msgctxt "connect-view"
+msgid "Active features"
+msgstr "Actieve functies"
+
+msgctxt "connect-view"
 msgid "Congrats!"
 msgstr "Gefeliciteerd!"
+
+msgctxt "connect-view"
+msgid "Connection details"
+msgstr "Verbindingsgegevens"
 
 msgctxt "connect-view"
 msgid "Disconnect"
@@ -645,12 +691,6 @@ msgctxt "connect-view"
 msgid "You’re all set!"
 msgstr "U bent er helemaal klaar voor!"
 
-#. %(hostname)s - The current server the app is connected to, e.g. "se-got-wg-001 using DAITA"
-#. %(daita)s - Will be replaced with "DAITA"
-msgctxt "connection-info"
-msgid "%(hostname)s using %(daita)s"
-msgstr "%(hostname)s via %(daita)s"
-
 #. The hostname line displayed below the country on the main screen
 #. Available placeholders:
 #. %(relay)s - the relay hostname
@@ -662,14 +702,6 @@ msgstr "%(relay)s via %(entry)s"
 msgctxt "connection-info"
 msgid "%(relay)s via Custom bridge"
 msgstr "%(relay)s via aangepaste bridge"
-
-#. The tunnel type line displayed below the hostname line on the main screen
-#. Available placeholders:
-#. %(tunnelType)s - the tunnel type, i.e OpenVPN
-#. %(bridgeType)s - the bridge type, i.e Shadowsocks
-msgctxt "connection-info"
-msgid "%(tunnelType)s via %(bridgeType)s"
-msgstr "%(tunnelType)s via %(bridgeType)s"
 
 msgctxt "connection-info"
 msgid "In"
@@ -1501,6 +1533,9 @@ msgctxt "settings-view"
 msgid "Support"
 msgstr "Ondersteuning"
 
+msgid "%s custom port"
+msgstr "Aangepaste %s-poort"
+
 msgctxt "settings-view"
 msgid "Update available. Install the latest app version to stay up to date."
 msgstr "Update beschikbaar. Installeer de nieuwste appversie om up-to-date te blijven."
@@ -1761,8 +1796,8 @@ msgid "Update your kernel."
 msgstr "Werk uw kernel bij."
 
 msgctxt "tunnel-control"
-msgid "Secure my connection"
-msgstr "Mijn verbinding beveiligen"
+msgid "Connect"
+msgstr "Verbinden"
 
 msgctxt "tunnel-control"
 msgid "Switch location"
@@ -1909,7 +1944,7 @@ msgstr "Gokken"
 #. %(wireguard)s - Will be replaced with the string "WireGuard"
 msgctxt "vpn-settings-view"
 msgid "Increases anonymity by routing your traffic into one %(wireguard)s server and out another, making it harder to trace."
-msgstr "Verhoogt de anonimiteit doordat uw verkeer in de ene %(wireguard)s-server binnenkomt en bij een andere server eruit gaat, waardoor het moeilijker te traceren is."
+msgstr "Verhoogt de anonimiteit doordat uw verkeer via de ene %(wireguard)s-server binnenkomt en via een andere eruit gaat, waardoor het moeilijker te traceren is."
 
 msgctxt "vpn-settings-view"
 msgid "IPv4 is always enabled and the majority of websites and applications use this protocol. We do not recommend enabling IPv6 unless you know you need it."
@@ -2025,6 +2060,16 @@ msgctxt "wireguard-settings-nav"
 msgid "%(wireguard)s settings"
 msgstr "%(wireguard)s-instellingen"
 
+#. Title label in navigation bar
+msgctxt "wireguard-settings-nav"
+msgid "Shadowsocks"
+msgstr "Shadowsocks"
+
+#. Title label in navigation bar
+msgctxt "wireguard-settings-nav"
+msgid "UDP-over-TCP"
+msgstr "UDP-over-TCP"
+
 msgctxt "wireguard-settings-view"
 msgid "%(daita)s (%(daitaFull)s) hides patterns in your encrypted VPN traffic. If anyone is monitoring your connection, this makes it significantly harder for them to identify what websites you are visiting. It does this by carefully adding network noise and making all network packets the same size."
 msgstr "%(daita)s (%(daitaFull)s) verbergt patronen in het versleutelde VPN-verkeer. Als iemand de verbinding in de gaten houdt, maakt dit het aanzienlijk moeilijker voor diegene om te zien welke websites u bezoekt. Dit wordt gedaan door zorgvuldig netwerkruis toe te voegen en alle netwerkpakketten even groot te maken."
@@ -2036,8 +2081,8 @@ msgid "%(wireguard)s settings"
 msgstr "%(wireguard)s-instellingen"
 
 msgctxt "wireguard-settings-view"
-msgid "Attention: Since this increases your total network traffic, be cautious if you have a limited data plan. It can also negatively impact your network speed. Please consider this if you want to enable %(daita)s."
-msgstr "Let op: omdat dit het totale netwerkverkeer verhoogt, moet u voorzichtig zijn als u een beperkt data-abonnement hebt. Ook kan het uw netwerksnelheid negatief beïnvloeden. Houd hier rekening mee als u %(daita)s wilt inschakelen."
+msgid "Hides patterns in your encrypted VPN traffic. Since this increases your total network traffic, be cautious if you have a limited data plan. It can also negatively impact your network speed and battery usage."
+msgstr "Verbergt patronen in uw versleutelde VPN-verkeer. Omdat dit het totale netwerkverkeer verhoogt, moet u voorzichtig zijn als u een beperkt data-abonnement hebt. Ook kan het uw netwerksnelheid en batterijgebruik negatief beïnvloeden."
 
 msgctxt "wireguard-settings-view"
 msgid "IP version"
@@ -2060,12 +2105,15 @@ msgid "Obfuscation hides the WireGuard traffic inside another protocol. It can b
 msgstr "Obfuscatie verbergt het WireGuard-verkeer in een ander protocol. Het kan worden gebruikt om censuur en andere soorten filtering te omzeilen, waar een gewone WireGuard-verbinding zou worden geblokkeerd."
 
 msgctxt "wireguard-settings-view"
-msgid "On (UDP-over-TCP)"
-msgstr "Aan (UDP-over-TCP)"
-
-msgctxt "wireguard-settings-view"
 msgid "Port"
 msgstr "Poort"
+
+#. Text showing currently selected port.
+#. Available placeholders:
+#. %(port)s - Can be either a number between 1 and 65000 or the text "Automatic".
+msgctxt "wireguard-settings-view"
+msgid "Port: %(port)s"
+msgstr "Poort: %(port)s"
 
 #. The title for the WireGuard quantum resistance selector. This setting
 #. makes the cryptography resistant to the future abilities of quantum
@@ -2084,6 +2132,10 @@ msgid "Set %(wireguard)s MTU value. Valid range: %(min)d - %(max)d."
 msgstr "Stel de MTU-waarde voor %(wireguard)s in. Geldig bereik: %(min)d - %(max)d."
 
 msgctxt "wireguard-settings-view"
+msgid "Shadowsocks"
+msgstr "Shadowsocks"
+
+msgctxt "wireguard-settings-view"
 msgid "The automatic setting will randomly choose from the valid port ranges shown below."
 msgstr "Bij de automatische instelling wordt willekeurig gekozen uit de hieronder weergegeven geldige poortbereiken."
 
@@ -2098,18 +2150,22 @@ msgctxt "wireguard-settings-view"
 msgid "This allows access to %(wireguard)s for devices that only support IPv6."
 msgstr "Hiermee krijgen apparaten die alleen IPv6 ondersteunen toegang tot %(wireguard)s."
 
-#. Warning text in a dialog that is displayed after a setting is toggled.
-msgctxt "wireguard-settings-view"
-msgid "This feature isn't available on all servers. You might need to change location after enabling."
-msgstr "Deze functie is niet op alle servers beschikbaar. Mogelijk moet u na het inschakelen van locatie veranderen."
-
 msgctxt "wireguard-settings-view"
 msgid "This feature makes the WireGuard tunnel resistant to potential attacks from quantum computers."
 msgstr "Deze eigenschap maakt de WireGuard-tunnel bestand tegen mogelijke aanvallen met kwantumcomputers."
 
 msgctxt "wireguard-settings-view"
+msgid "UDP-over-TCP"
+msgstr "UDP-over-TCP"
+
+msgctxt "wireguard-settings-view"
 msgid "UDP-over-TCP port"
 msgstr "UDP-over-TCP-poort"
+
+#. Text describing the valid port range for a port selector.
+msgctxt "wireguard-settings-view"
+msgid "Valid range: %(min)s - %(max)s"
+msgstr "Geldig bereik: %(min)s - %(max)s"
 
 msgctxt "wireguard-settings-view"
 msgid "Which TCP port the UDP-over-TCP obfuscation protocol should connect to on the VPN server."
@@ -2118,14 +2174,21 @@ msgstr "Met welke TCP-poort moet het UDP-over-TCP-obfuscatieprotocol verbinding 
 msgid "%s (added)"
 msgstr "%s (toegevoegd)"
 
+msgctxt "String explaining where the user is connected and whether the connection is \"using\" a specific feature. So the first placeholder is a location and the second is a named feature. Example: \"gb-lon-wg-304 using DAITA\" (where \"gb-lon-wg-304\" is the location and \"DAITA\" is the named feature)"
+msgid "%s using %s"
+msgstr "%s via %s"
+
 msgid "%s was added to \"%s\""
 msgstr "%s is toegevoegd aan \"%s\""
 
 msgid "%s was added to your account."
 msgstr "%s is toegevoegd aan uw account."
 
+msgid "%s was removed from \"%s\""
+msgstr "%s is verwijderd uit \"%s\""
+
 msgid "1. After clicking on the <b>Go to VPN settings</b> button below, click on the cogwheel next to the <b>Mullvad VPN</b> name."
-msgstr "1. Klik nadat u op de knop <b>Naar VPN-instellingen</b> hebt geklikt op het tandwiel naast de naam <b>Mullvad VPN</b>."
+msgstr "1. Klik, nadat u op de knop <b>Naar VPN-instellingen</b> hebt geklikt, op het tandwiel naast de naam <b>Mullvad VPN</b>."
 
 msgid "2. To enable Auto-connect, click on the toggle next to <b>Always-on VPN</b>."
 msgstr "2. Klik om Automatisch verbinden in te schakelen op de schakelaar naast <b>Altijd-aan VPN</b>."
@@ -2190,8 +2253,11 @@ msgstr "Altijd-aan VPN is mogelijk ingeschakeld voor een andere app"
 msgid "At least one method needs to be enabled"
 msgstr "Er moet minimaal één methode ingeschakeld zijn"
 
-msgid "Attention: Split tunneling is a privacy risk."
-msgstr "Let op: split tunneling is een privacyrisico."
+msgid "Attention: If \"Block connections without VPN\" is enabled, split apps will not have Internet. Always keep in mind that split tunneling is a privacy risk."
+msgstr "Let op: Als \"Verbindingen zonder VPN blokkeren\" is ingeschakeld, hebben gesplitste apps geen internet. Houd er altijd rekening mee dat split tunneling een privacyrisico vormt."
+
+msgid "Attention: Since this increases your total network traffic, be cautious if you have a limited data plan. It can also negatively impact your network speed and battery usage."
+msgstr "Let op: omdat dit het totale netwerkverkeer verhoogt, moet u voorzichtig zijn als u een beperkt data-abonnement hebt. Ook kan het uw netwerksnelheid en batterijgebruik beïnvloeden."
 
 msgid "Attention: this setting cannot be used in combination with <b>Use custom DNS server</b>."
 msgstr "Let op: deze instelling kan niet worden gebruikt in combinatie met <b>Aangepaste DNS-server gebruiken</b>."
@@ -2199,16 +2265,12 @@ msgstr "Let op: deze instelling kan niet worden gebruikt in combinatie met <b>Aa
 msgid "Auto-connect & Lockdown mode"
 msgstr "Automatisch verbinden en lockdownmodus"
 
-msgid "Auto-connect & \\nLockdown mode"
-msgstr "Automatisch verbinden en \\nlockdownmodus"
-
 msgid "Auto-connect (legacy)"
 msgstr "Automatisch verbinden (verouderd)"
 
 msgid "Auto-connect is called Always-on VPN in the Android system settings and it makes sure you are constantly connected to the VPN tunnel and auto connects after restart."
 msgstr "Automatisch verbinden heet Altijd-aan VPN in de Android-systeeminstellingen en zorgt ervoor dat u altijd verbonden bent met de VPN-tunnel en automatisch verbinding maakt na een herstart."
 
-msgctxt "Description of the existing \"auto-connect\" functionality as well as a notification about it being removed/replaced in a future update."
 msgid "Automatically connect when the app launches. This setting will be replaced with a new connect on device start-up feature in a future update."
 msgstr "Maak automatisch verbinding wanneer de app wordt gestart. Deze instelling wordt in een toekomstige update vervangen door een nieuwe functie om verbinding te maken bij het opstarten van het apparaat."
 
@@ -2239,7 +2301,6 @@ msgstr "Nieuwe lijst maken"
 msgid "Critical error (your attention is required)"
 msgstr "Kritieke fout (uw aandacht is vereist)"
 
-msgctxt "Status information about which method/configuration is actively being used. The placeholder is replaced by a built-in or custom method. For example \"Current: Direct\" or \"Current: MyCustomMethod\". Note that it's not \"current\" as in \"present time\"."
 msgid "Current: %s"
 msgstr "Huidig: %s"
 
@@ -2266,6 +2327,9 @@ msgstr "Verwerpen"
 
 msgid "Discard changes?"
 msgstr "Wijzigingen verwerpen?"
+
+msgid "Dismiss"
+msgstr "Negeren"
 
 msgid "Edit custom lists"
 msgstr "Aangepaste lijsten bewerken"
@@ -2327,11 +2391,11 @@ msgstr "Importeren geslaagd, overschrijvingen actief"
 msgid "Importing new overrides might replace some previously imported overrides."
 msgstr "Het importeren van nieuwe overschrijvingen kan sommige eerder geïmporteerde overschrijvingen vervangen."
 
-msgid "Install Mullvad VPN (%s) to stay up to date"
-msgstr "Installeer Mullvad VPN (%s) om up-to-date te blijven"
-
 msgid "Invalid or missing value \"%s\""
 msgstr "Ongeldige of ontbrekende waarde \"%s\""
+
+msgid "It looks like you’ve entered an account number instead of a voucher code. If you would like to change the active account, please log out first."
+msgstr "Het lijkt erop dat u een accountnummer hebt ingevoerd in plaats van een vouchercode. Als u het actieve account wilt wijzigen, meld u dan eerst af."
 
 msgid "Lets you select apps that should access the Internet directly without going through the VPN tunnel."
 msgstr "Hier kunt u apps selecteren die rechtstreeks toegang tot het internet moeten hebben zonder via de VPN-tunnel te gaan."
@@ -2375,6 +2439,9 @@ msgstr "Geen locaties gevonden"
 msgid "Not found"
 msgstr "Niet gevonden"
 
+msgid "On (UDP-over-TCP)"
+msgstr "Aan (UDP-over-TCP)"
+
 msgid "Overrides active"
 msgstr "Overschrijvingen actief"
 
@@ -2417,8 +2484,8 @@ msgstr "Recursielimiet"
 msgid "Remove"
 msgstr "Verwijderen"
 
-msgid "Remove %s from list"
-msgstr "%s verwijderen uit lijst"
+msgid "Remove %s from %s"
+msgstr "%s verwijderen uit %s"
 
 msgid "Remove custom port"
 msgstr "Aangepaste poort verwijderen"
@@ -2434,6 +2501,9 @@ msgstr "Overschrijvingen resetten"
 
 msgid "Reset to default"
 msgstr "Standaardwaarde herstellen"
+
+msgid "Secure my connection"
+msgstr "Mijn verbinding beveiligen"
 
 msgid "Secured"
 msgstr "Beveiligd"
@@ -2483,6 +2553,9 @@ msgstr "Er zijn geen VPN-instellingen op uw apparaat"
 msgid "This address has already been entered."
 msgstr "Dit adres is al ingevoerd."
 
+msgid "This feature isn’t available on all servers. You might need to change location after enabling."
+msgstr "Deze functie is niet op alle servers beschikbaar. Mogelijk moet u na het inschakelen van locatie veranderen."
+
 msgid "This field is required"
 msgstr "Dit veld is verplicht"
 
@@ -2517,9 +2590,8 @@ msgid "Unknown or prohibited key \"%s\""
 msgstr "Onbekende of verboden sleutel \"%s\""
 
 msgid "Unsecured"
-msgstr "Niet beveiligd"
+msgstr "Onbeveiligd"
 
-msgctxt "Notification message shown when the app lacks a permission called \"VPN permission\"."
 msgid "Unsecured (No VPN permission)"
 msgstr "Onbeveiligd (geen VPN-toestemming)"
 
@@ -2580,9 +2652,6 @@ msgstr "Wanneer u verbonden bent, wordt uw daadwerkelijke locatie gemaskeerd met
 msgid "WireGuard MTU"
 msgstr "WireGuard-MTU"
 
-msgid "WireGuard custom port"
-msgstr "Aangepaste WireGuard-poort"
-
 msgid "WireGuard obfuscation"
 msgstr "WireGuard-obfuscatie"
 
@@ -2595,10 +2664,12 @@ msgstr "U LEKT MOGELIJK NETWERKVERKEER"
 msgid "You are running an unsupported app version."
 msgstr "U gebruikt een niet-ondersteunde versie van de app."
 
+msgid "\"%s\" was created"
+msgstr "\"%s\" is gemaakt"
+
 msgid "\"%s\" was deleted"
 msgstr "\"%s\" is verwijderd"
 
-msgctxt "Clickable link that leads to our website."
 msgid "here"
 msgstr "hier"
 
